이미지와_컴퓨터비전.md 목차 적용

--- a/스터디/이미지와_컴퓨터비전.md
+++ b/스터디/이미지와_컴퓨터비전.md
@@ -15,31 +15,96 @@ author: "김명환"
 > **최종 수정**: 2025년 8월 14일
 
 ## 목차
-1. [컴퓨터 비전 개요](#컴퓨터-비전-개요)
-2. [디지털 이미지의 구조](#디지털-이미지의-구조)
-3. [전통적인 컴퓨터 비전 방법](#전통적인-컴퓨터-비전-방법)
-4. [딥러닝과 CNN](#딥러닝과-cnn)
-5. [CNN 구성 요소](#cnn-구성-요소)
-6. [CNN 아키텍처 시각화](#cnn-아키텍처-시각화)
-7. [이미지 처리 파이프라인](#이미지-처리-파이프라인)
-8. [이미지 전처리 방법과 종류](#이미지-전처리-방법과-종류)
-9. [이미지 증강(Data Augmentation)](#이미지-증강data-augmentation)
-10. [정규화의 장단점과 실제 적용](#정규화의-장단점과-실제-적용)
-11. [주요 컴퓨터 비전 태스크](#주요-컴퓨터-비전-태스크)
-12. [유명한 CNN 아키텍처](#유명한-cnn-아키텍처)
-13. [실용 응용 분야](#실용-응용-분야)
-14. [용어 정리](#용어-정리)
-15. [부록: 상세 구현 코드](#부록-상세-구현-코드)
+- 1. [컴퓨터 비전 개요](#1-컴퓨터-비전-개요)
+   - 1.1. [컴퓨터 비전이란?](#11-컴퓨터-비전이란)
+   - 1.2. [컴퓨터 비전의 목표](#12-컴퓨터-비전의-목표)
+
+- 2. [디지털 이미지의 구조](#2-디지털-이미지의-구조)
+   - 2.1. [픽셀의 개념](#21-픽셀의-개념)
+   - 2.2. [이미지 해상도와 차원](#22-이미지-해상도와-차원)
+
+- 3. [전통적인 컴퓨터 비전 방법](#3-전통적인-컴퓨터-비전-방법)
+   - 3.1. [에지 디텍션(Edge Detection)](#31-에지-디텍션edge-detection)
+   - 3.2. [컨볼루션 연산 기본](#32-컨볼루션-연산-기본)
+   - 3.3. [전통적 방법의 한계](#33-전통적-방법의-한계)
+
+- 4. [딥러닝과 CNN](#4-딥러닝과-cnn)
+   - 4.1. [딥러닝의 혁신](#41-딥러닝의-혁신)
+   - 4.2. [컨볼루셔널 신경망(CNN) 소개](#42-컨볼루셔널-신경망cnn-소개)
+
+- 5. [CNN 구성 요소](#5-cnn-구성-요소)
+   - 5.1. [컨볼루션 레이어(Convolution Layer)](#51-컨볼루션-레이어convolution-layer)
+   - 5.2. [활성화 함수 - ReLU](#52-활성화-함수---relu)
+   - 5.3. [풀링 레이어(Pooling Layer)](#53-풀링-레이어pooling-layer)
+
+- 6. [CNN 아키텍처 시각화](#6-cnn-아키텍처-시각화)
+   - 6.1. [전체 CNN 파이프라인](#61-전체-cnn-파이프라인)
+   - 6.2. [컨볼루션 연산 상세 과정](#62-컨볼루션-연산-상세-과정)
+   - 6.3. [주요 CNN 아키텍처 비교](#63-주요-cnn-아키텍처-비교)
+
+- 7. [이미지 처리 파이프라인](#7-이미지-처리-파이프라인)
+   - 7.1. [전체 이미지 모델링 파이프라인](#71-전체-이미지-모델링-파이프라인)
+   - 7.2. [이미지 전처리 세부 과정](#72-이미지-전처리-세부-과정)
+   - 7.3. [데이터 증강 전략 플로우](#73-데이터-증강-전략-플로우)
+   - 7.4. [모델 학습 과정 상세화](#74-모델-학습-과정-상세화)
+
+- 8. [이미지 전처리 방법과 종류](#8-이미지-전처리-방법과-종류)
+   - 8.1. [전처리의 목적](#81-전처리의-목적)
+   - 8.2. [기본 전처리 방법](#82-기본-전처리-방법)
+   - 8.3. [히스토그램 처리](#83-히스토그램-처리)
+   - 8.4. [노이즈 제거](#84-노이즈-제거)
+
+- 9. [이미지 증강(Data Augmentation)](#9-이미지-증강data-augmentation)
+   - 9.1. [증강의 목적](#91-증강의-목적)
+   - 9.2. [기하학적 변환](#92-기하학적-변환)
+   - 9.3. [색상 및 밝기 변환](#93-색상-및-밝기-변환)
+   - 9.4. [고급 증강 기법](#94-고급-증강-기법)
+   - 9.5. [증강 전략과 고려사항](#95-증강-전략과-고려사항)
+
+- 10. [정규화의 장단점과 실제 적용](#10-정규화의-장단점과-실제-적용)
+    - 10.1. [정규화 방법들](#101-정규화-방법들)
+    - 10.2. [정규화의 장점](#102-정규화의-장점)
+    - 10.3. [정규화의 단점과 이미지 복원에서의 문제](#103-정규화의-단점과-이미지-복원에서의-문제)
+    - 10.4. [복원 성능 저하 해결 방안](#104-복원-성능-저하-해결-방안)
+
+- 11. [주요 컴퓨터 비전 태스크](#11-주요-컴퓨터-비전-태스크)
+    - 11.1. [이미지 분류(Image Classification)](#111-이미지-분류image-classification)
+    - 11.2. [객체 탐지(Object Detection)](#112-객체-탐지object-detection)
+    - 11.3. [시맨틱 세그멘테이션(Semantic Segmentation)](#113-시맨틱-세그멘테이션semantic-segmentation)
+    - 11.4. [인스턴스 세그멘테이션(Instance Segmentation)](#114-인스턴스-세그멘테이션instance-segmentation)
+
+- 12. [유명한 CNN 아키텍처](#12-유명한-cnn-아키텍처)
+    - 12.1. [LeNet-5 (1998년)](#121-lenet-5-1998년)
+    - 12.2. [AlexNet (2012년)](#122-alexnet-2012년)
+    - 12.3. [VGG (2014년)](#123-vgg-2014년)
+    - 12.4. [ResNet (2015년)](#124-resnet-2015년)
+    - 12.5. [EfficientNet (2019년)](#125-efficientnet-2019년)
+
+- 13. [실용 응용 분야](#13-실용-응용-분야)
+    - 13.1. [자율주행](#131-자율주행)
+    - 13.2. [의료 영상](#132-의료-영상)
+    - 13.3. [제조업](#133-제조업)
+    - 13.4. [보안 및 감시](#134-보안-및-감시)
+    - 13.5. [소매업](#135-소매업)
+
+- 14. [용어 정리](#14-용어-정리)
+
+- 15. [부록: 상세 구현 코드](#15-부록-상세-구현-코드)
+    - 15.1. [완전한 이미지 분류 파이프라인](#151-완전한-이미지-분류-파이프라인)
+    - 15.2. [고급 데이터 증강 기법](#152-고급-데이터-증강-기법)
+    - 15.3. [이미지 복원을 위한 특별한 전처리](#153-이미지-복원을-위한-특별한-전처리)
+    - 15.4. [모델 평가 및 시각화](#154-모델-평가-및-시각화)
+    - 15.5. [성능 최적화 및 배포](#155-성능-최적화-및-배포)
+    - 15.6. [실시간 추론 시스템](#156-실시간-추론-시스템)
 
 ---
 
-## 컴퓨터 비전 개요
+## 1. 컴퓨터 비전 개요
 
-### 컴퓨터 비전이란?
-
+### 1.1. 컴퓨터 비전이란?
 **컴퓨터 비전**(Computer Vision)은 컴퓨터가 사람처럼 이미지나 비디오를 "보고" 이해할 수 있게 하는 AI 분야입니다.
 
-#### 인간 시각 vs 컴퓨터 시각
+#### 1.1.1. 인간 시각 vs 컴퓨터 시각
 
 | 구분 | 인간의 시각 처리 | 컴퓨터의 시각 처리 |
 |------|----------------|------------------|
@@ -48,22 +113,21 @@ author: "김명환"
 | **이해 방식** | 맥락적 이해 | 픽셀 단위 수치 데이터 |
 | **학습 방법** | 경험과 직관 | 패턴 매칭과 통계적 학습 |
 
-### 컴퓨터 비전의 목표
-
-1. **인식(Recognition)**: "이것은 무엇인가?"
-2. **분할(Segmentation)**: "어디에 무엇이 있는가?"
-3. **추적(Tracking)**: "어떻게 움직이는가?"
-4. **재구성(Reconstruction)**: "3D 형태는 어떤가?"
+### 1.2. 컴퓨터 비전의 목표
+  - ① **인식(Recognition)**: "이것은 무엇인가?"
+  - ② **분할(Segmentation)**: "어디에 무엇이 있는가?"
+  - ③ **추적(Tracking)**: "어떻게 움직이는가?"
+  - ④ **재구성(Reconstruction)**: "3D 형태는 어떤가?"
 
 ---
 
-## 디지털 이미지의 구조
+## 2. 디지털 이미지의 구조
 
-### 픽셀의 개념
+### 2.1. 픽셀의 개념
 
 디지털 이미지는 **픽셀(Pixel, Picture Element)**이라는 작은 점들의 격자로 구성됩니다.
 
-#### 흑백 이미지 구조 예시
+#### 2.1.1. 흑백 이미지 구조 예시
 
 ```
 5x5 픽셀 흑백 이미지 (0=검정, 255=흰색)
@@ -75,7 +139,7 @@ author: "김명환"
 [100 150 200 250 255]
 ```
 
-#### 컬러 이미지 구조 (RGB)
+#### 2.1.2. 컬러 이미지 구조 (RGB)
 
 ```
 각 픽셀이 3개의 값을 가짐:
@@ -84,7 +148,7 @@ author: "김명환"
 픽셀 (0,2) = [R: 0, G: 0, B: 255]    # 파란색
 ```
 
-### 이미지 해상도와 차원
+### 2.2. 이미지 해상도와 차원
 
 - **해상도**: 이미지의 픽셀 개수 (예: 1920x1080)
 - **차원**: 채널 수
@@ -94,15 +158,15 @@ author: "김명환"
 
 ---
 
-## 전통적인 컴퓨터 비전 방법
+## 3. 전통적인 컴퓨터 비전 방법
 
 딥러닝 이전에는 수동으로 특징을 정의해야 했습니다.
 
-### 1. 에지 디텍션(Edge Detection)
+### 3.1. 에지 디텍션(Edge Detection)
 
 **목적**: 이미지에서 경계선 찾기
 
-#### Sobel 필터 예제
+#### 3.1.1. Sobel 필터 예제
 
 ```
 수직 에지 검출:          수평 에지 검출:
@@ -111,7 +175,7 @@ author: "김명환"
 [-1  0  1]              [ 1  2  1]
 ```
 
-### 2. 컨볼루션 연산 기본
+### 3.2. 컨볼루션 연산 기본
 
 ```
 이미지:    필터:    결과:
@@ -120,63 +184,106 @@ author: "김명환"
 [7 8 9]            [7×1+8×0 = 7]
 ```
 
-### 전통적 방법의 한계
-
-1. **수동 특징 설계**: 사람이 직접 어떤 특징을 찾을지 정의
-2. **도메인 특화**: 한 문제에 최적화된 방법이 다른 문제에는 부적합
-3. **복잡한 패턴 인식 한계**: 고차원적 패턴 인식 어려움
-4. **확장성 부족**: 새로운 객체나 상황에 대한 일반화 어려움
+### 3.3. 전통적 방법의 한계
+  - ① **수동 특징 설계**: 사람이 직접 어떤 특징을 찾을지 정의
+  - ② **도메인 특화**: 한 문제에 최적화된 방법이 다른 문제에는 부적합
+  - ③ **복잡한 패턴 인식 한계**: 고차원적 패턴 인식 어려움
+  - ④ **확장성 부족**: 새로운 객체나 상황에 대한 일반화 어려움
 
 ---
 
-## 딥러닝과 CNN
+## 4. 딥러닝과 CNN
 
-### 딥러닝의 혁신
+### 4.1. 딥러닝의 혁신
 
 **패러다임 변화:**
-- **전통적 방법**: 수동 특징 설계 → 분류기
-- **딥러닝**: 데이터로부터 자동으로 특징 학습 → 종단간(End-to-End) 학습
+  - **전통적 방법**: 수동 특징 설계 → 분류기
+  - **딥러닝**: 데이터로부터 자동으로 특징 학습 → 종단간(End-to-End) 학습
 
-### 컨볼루셔널 신경망(CNN) 소개
+### 4.2. 컨볼루셔널 신경망(CNN) 소개
 
-**CNN**(Convolutional Neural Network, 컨볼루셔널[kən.və.ˈluː.ʃən.əl])은 이미지의 공간적 특성을 활용한 신경망입니다.
+**CNN**(Convolutional Neural Network, 컨볼루셔널)은 이미지의 공간적 특성을 활용한 신경망입니다.
 
-#### CNN의 핵심 아이디어
+#### 4.2.1. CNN의 핵심 아이디어
 
-1. **지역 연결성(Local Connectivity)**: 인근 픽셀들만 연결
-2. **파라미터 공유(Parameter Sharing)**: 같은 필터를 전체 이미지에 적용  
-3. **평행이동 불변성(Translation Invariance)**: 객체의 위치가 바뀌어도 인식 가능
+  - ① **지역 연결성(Local Connectivity)**: 인근 픽셀들만 연결
+  - ② **파라미터 공유(Parameter Sharing)**: 같은 필터를 전체 이미지에 적용  
+  - ③ **평행이동 불변성(Translation Invariance)**: 객체의 위치가 바뀌어도 인식 가능
 
 ---
 
-## CNN 아키텍처 시각화
+## 5. CNN 구성 요소
 
-### 전체 CNN 파이프라인
+### 5.1. 컨볼루션 레이어(Convolution Layer)
+
+#### 5.1.1. 기본 컨볼루션 연산
 
 ```mermaid
 graph TD
-    A[입력 이미지<br/>224×224×3] --> B[Conv Layer 1<br/>3×3 필터, 32개<br/>224×224×32]
-    B --> C[ReLU 활성화]
-    C --> D[MaxPool 2×2<br/>112×112×32]
+    subgraph G0["Input"]
+        A[입력 이미지<br/>224×224×3]
+    end
+
+    subgraph G1["Feature Extraction Layers"]
+        direction LR
+
+        subgraph G01["Conv Layer1"]
+            B[Conv Layer 1<br/>3×3 필터, 32개<br/>224×224×32]
+            B --> C[ReLU 활성화]
+            C --> D[MaxPool 2×2<br/>112×112×32]
+        end
     
-    D --> E[Conv Layer 2<br/>3×3 필터, 64개<br/>112×112×64]
-    E --> F[ReLU 활성화]
-    F --> G[MaxPool 2×2<br/>56×56×64]
-    
-    G --> H[Conv Layer 3<br/>3×3 필터, 128개<br/>56×56×128]
-    H --> I[ReLU 활성화]
-    I --> J[MaxPool 2×2<br/>28×28×128]
-    
-    J --> K[Conv Layer 4<br/>3×3 필터, 256개<br/>28×28×256]
-    K --> L[ReLU 활성화]
-    L --> M[MaxPool 2×2<br/>14×14×256]
-    
-    M --> N[Flatten<br/>50,176개 뉴런]
-    N --> O[FC Layer 1<br/>512개 뉴런]
-    O --> P[ReLU + Dropout]
-    P --> Q[FC Layer 2<br/>256개 뉴런]
-    Q --> R[ReLU + Dropout]
-    R --> S[출력 레이어<br/>클래스 수]
+        subgraph G02["Conv Layer2"]
+            E[Conv Layer 2<br/>3×3 필터, 64개<br/>112×112×64]
+            E --> F[ReLU 활성화]
+            F --> G[MaxPool 2×2<br/>56×56×64]
+        end
+        
+        subgraph G03["Conv Layer3"]
+            H[Conv Layer 3<br/>3×3 필터, 128개<br/>56×56×128]
+            H --> I[ReLU 활성화]
+            I --> J[MaxPool 2×2<br/>28×28×128]
+        end
+        
+        subgraph G04["Conv Layer4"]
+            K[Conv Layer 4<br/>3×3 필터, 256개<br/>28×28×256]
+            K --> L[ReLU 활성화]
+            L --> M[MaxPool 2×2<br/>14×14×256]
+        end
+
+        G01 --> G02
+        G02 --> G03
+        G03 --> G04
+    end
+
+    subgraph G2["Flatten Layers"]
+        N[Flatten<br/>50,176개 뉴런]
+    end
+
+    subgraph G3["Fully Connected Layers"]
+        direction LR
+
+        subgraph G31["Fully Connected Layers1"]
+            O[FC Layer 1<br/>512개 뉴런]
+            O --> P[ReLU + Dropout]
+        end
+
+        subgraph G32["Fully Connected Layers2"]
+            Q[FC Layer 2<br/>256개 뉴런]
+            Q --> R[ReLU + Dropout]
+        end
+
+        G31 --> G32
+    end
+
+    subgraph G4["Output Layers"]
+        S[출력 레이어<br/>클래스 수]
+    end
+
+    G0 --> G1
+    G1 --> G2
+    G2 --> G3
+    G3 --> G4
 ```
 
 ### 컨볼루션 연산 상세 과정
@@ -231,31 +338,38 @@ graph TD
     end
 ```
 ---
+## 7. 이미지 처리 파이프라인
 
-## 이미지 처리 파이프라인
-
-### 전체 이미지 모델링 파이프라인
+### 7.1. 전체 이미지 모델링 파이프라인
 
 ```mermaid
 flowchart TD
     subgraph DataCollection ["데이터 수집"]
+        direction LR
+
         A1["원시 이미지 데이터"] --> A2["데이터 라벨링"]
         A2 --> A3["데이터셋 분할<br/>Train/Validation/Test"]
     end
     
     subgraph Preprocessing ["전처리 단계"]
+        direction LR
+        
         B1["크기 조정<br/>Resize/Crop"] --> B2["색공간 변환<br/>RGB/HSV/Grayscale"]
         B2 --> B3["정규화<br/>0-1 or -1~1 범위"]
         B3 --> B4["노이즈 제거<br/>필터링"]
     end
     
     subgraph DataAug ["데이터 증강"]
+        direction LR
+        
         C1["기하학적 변환<br/>회전/이동/크기조정"] --> C2["색상 변환<br/>밝기/대비/채도"]
         C2 --> C3["노이즈 추가<br/>Gaussian/Salt&Pepper"]
         C3 --> C4["고급 증강<br/>Mixup/CutMix"]
     end
     
     subgraph Training ["모델 학습"]
+        direction LR
+        
         D1["CNN 아키텍처<br/>선택/설계"] --> D2["손실함수 정의<br/>CrossEntropy/MSE"]
         D2 --> D3["옵티마이저 설정<br/>Adam/SGD"]
         D3 --> D4["학습률 스케줄링"]
@@ -263,25 +377,29 @@ flowchart TD
     end
     
     subgraph Evaluation ["평가 및 최적화"]
+        direction LR
+        
         E1["검증 성능 측정<br/>Accuracy/F1-Score"] --> E2["하이퍼파라미터<br/>튜닝"]
         E2 --> E3["모델 앙상블<br/>여러 모델 조합"]
         E3 --> E4["최종 모델 선택"]
     end
     
     subgraph Deployment ["배포 및 추론"]
+        direction LR
+        
         F1["모델 압축<br/>Quantization/Pruning"] --> F2["추론 최적화<br/>TensorRT/ONNX"]
         F2 --> F3["실시간 처리<br/>스트리밍/배치"]
         F3 --> F4["성능 모니터링<br/>정확도/속도 추적"]
     end
     
-    A3 --> B1
-    B4 --> C1
-    C4 --> D1
-    D5 --> E1
-    E4 --> F1
+    DataCollection --> Preprocessing
+    Preprocessing --> DataAug
+    DataAug --> Training
+    Training --> Evaluation
+    Evaluation --> Deployment
 ```
 
-### 이미지 전처리 세부 과정
+### 7.2. 이미지 전처리 세부 과정
 
 ```mermaid
 flowchart TB
@@ -322,7 +440,7 @@ flowchart TB
     E4 --> F
 ```
 
-### 데이터 증강 전략 플로우
+### 7.3. 데이터 증강 전략 플로우
 
 ```mermaid
 graph TD
@@ -369,7 +487,7 @@ graph TD
     F4 --> G
 ```
 
-### 모델 학습 과정 상세화
+### 7.4. 모델 학습 과정 상세화
 
 ```mermaid
 sequenceDiagram
@@ -411,11 +529,11 @@ sequenceDiagram
 ```
 ---
 
-## CNN 구성 요소
+## 5. CNN 구성 요소
 
-### 1. 컨볼루션 레이어(Convolution Layer)
+### 5.1. 컨볼루션 레이어(Convolution Layer)
 
-#### 기본 컨볼루션 연산
+#### 5.1.1. 기본 컨볼루션 연산
 
 ```
 입력 (4x4):              필터 (3x3):
@@ -429,7 +547,7 @@ sequenceDiagram
 [63  69]
 ```
 
-#### 주요 하이퍼파라미터
+#### 5.1.2. 주요 하이퍼파라미터
 
 **스트라이드(Stride)**: 필터가 이동하는 간격
 ```
@@ -447,7 +565,7 @@ sequenceDiagram
              [0 0 0 0 0]
 ```
 
-### 2. 활성화 함수 - ReLU
+### 5.2. 활성화 함수 - ReLU
 
 ```python
 ReLU(x) = max(0, x)
@@ -456,9 +574,9 @@ ReLU(x) = max(0, x)
 출력: [ 0,  0, 0, 1, 2]
 ```
 
-### 3. 풀링 레이어(Pooling Layer)
+### 5.3. 풀링 레이어(Pooling Layer)
 
-#### 맥스 풀링 예제
+#### 5.3.1. 맥스 풀링 예제
 
 ```
 입력 (4x4):              2x2 맥스 풀링:    출력 (2x2):
@@ -470,16 +588,142 @@ ReLU(x) = max(0, x)
 
 ---
 
-## 이미지 전처리 방법과 종류
+## 6. CNN 아키텍처 시각화
 
-### 전처리의 목적
+### 6.1. 전체 CNN 파이프라인
 
-1. **데이터 표준화**: 모델이 일관성 있게 학습
-2. **성능 향상**: 노이즈 제거, 대비 개선
-3. **계산 효율성**: 이미지 크기 조정으로 연산량 감소
-4. **일반화 성능**: 다양한 조건에 robust한 모델 구축
+```mermaid
+graph TD
+    subgraph G0["Input"]
+        A[입력 이미지<br/>224×224×3]
+    end
 
-### 1. 기본 전처리 방법
+    subgraph G1["Feature Extraction Layers"]
+        direction LR
+
+        subgraph G01["Conv Layer1"]
+            B[Conv Layer 1<br/>3×3 필터, 32개<br/>224×224×32]
+            B --> C[ReLU 활성화]
+            C --> D[MaxPool 2×2<br/>112×112×32]
+        end
+    
+        subgraph G02["Conv Layer2"]
+            E[Conv Layer 2<br/>3×3 필터, 64개<br/>112×112×64]
+            E --> F[ReLU 활성화]
+            F --> G[MaxPool 2×2<br/>56×56×64]
+        end
+        
+        subgraph G03["Conv Layer3"]
+            H[Conv Layer 3<br/>3×3 필터, 128개<br/>56×56×128]
+            H --> I[ReLU 활성화]
+            I --> J[MaxPool 2×2<br/>28×28×128]
+        end
+        
+        subgraph G04["Conv Layer4"]
+            K[Conv Layer 4<br/>3×3 필터, 256개<br/>28×28×256]
+            K --> L[ReLU 활성화]
+            L --> M[MaxPool 2×2<br/>14×14×256]
+        end
+
+        G01 --> G02
+        G02 --> G03
+        G03 --> G04
+    end
+
+    subgraph G2["Flatten Layers"]
+        N[Flatten<br/>50,176개 뉴런]
+    end
+
+    subgraph G3["Fully Connected Layers"]
+        direction LR
+
+        subgraph G31["Fully Connected Layers1"]
+            O[FC Layer 1<br/>512개 뉴런]
+            O --> P[ReLU + Dropout]
+        end
+
+        subgraph G32["Fully Connected Layers2"]
+            Q[FC Layer 2<br/>256개 뉴런]
+            Q --> R[ReLU + Dropout]
+        end
+
+        G31 --> G32
+    end
+
+    subgraph G4["Output Layers"]
+        S[출력 레이어<br/>클래스 수]
+    end
+
+    G0 --> G1
+    G1 --> G2
+    G2 --> G3
+    G3 --> G4
+```
+
+### 6.2. 컨볼루션 연산 상세 과정
+
+```mermaid
+graph LR
+    subgraph "입력"
+        A["이미지<br/>H×W×C"]
+    end
+    
+    subgraph "컨볼루션 연산"
+        B["필터<br/>K×K×C×N"]
+        C["스트라이드<br/>S"]
+        D["패딩<br/>P"]
+    end
+    
+    subgraph "출력"
+        E["피처맵<br/>H'×W'×N"]
+    end
+    
+    A --> B
+    B --> E
+    C --> E
+    D --> E
+    
+    F["출력 크기 계산:<br/>H' = H + 2P - K / S + 1<br/>W' = W + 2P - K / S + 1"]   
+```
+
+### 6.3. 주요 CNN 아키텍처 비교
+
+```mermaid
+graph TD
+    subgraph "LeNet-5 (1998)"
+        L1[32×32×1] --> L2[Conv 6@5×5] --> L3[Pool] --> L4[Conv 16@5×5] --> L5[Pool] --> L6[FC 120] --> L7[FC 84] --> L8[Output 10]
+    end
+    
+    subgraph "AlexNet (2012)"
+        A1[227×227×3] --> A2[Conv 96@11×11] --> A3[Pool] --> A4[Conv 256@5×5] --> A5[Pool] --> A6[Conv 384@3×3] --> A7[Conv 384@3×3] --> A8[Conv 256@3×3] --> A9[Pool] --> A10[FC 4096] --> A11[FC 4096] --> A12[Output 1000]
+    end
+    
+    subgraph "ResNet Block"
+        R1[Input] --> R2[Conv 3×3]
+        R2 --> R3[BatchNorm]
+        R3 --> R4[ReLU]
+        R4 --> R5[Conv 3×3]
+        R5 --> R6[BatchNorm]
+        R1 --> R7[Identity/1×1 Conv]
+        R6 --> R8[Add]
+        R7 --> R8
+        R8 --> R9[ReLU]
+        R9 --> R10[Output]
+    end
+```
+
+---
+
+## 8. 이미지 전처리 방법과 종류
+
+### 8.1. 전처리의 목적
+
+  - ① **데이터 표준화**: 모델이 일관성 있게 학습
+  - ② **성능 향상**: 노이즈 제거, 대비 개선
+  - ③ **계산 효율성**: 이미지 크기 조정으로 연산량 감소
+  - ④ **일반화 성능**: 다양한 조건에 robust한 모델 구축
+
+### 8.2. 기본 전처리 방법
 
 #### 크기 조정(Resizing)
 
@@ -507,11 +751,11 @@ lab = cv2.cvtColor(image, cv2.COLOR_RGB2LAB)    # LAB
 ```
 
 **색공간별 특징:**
-- **RGB**: 기본 색공간, 하드웨어 친화적
-- **HSV**: 색상 분리 용이, 색상 기반 필터링에 유용
-- **LAB**: 인간 시각과 유사, 색상 보정에 효과적
+  - **RGB**: 기본 색공간, 하드웨어 친화적
+  - **HSV**: 색상 분리 용이, 색상 기반 필터링에 유용
+  - **LAB**: 인간 시각과 유사, 색상 보정에 효과적
 
-### 2. 히스토그램 처리
+### 8.3. 히스토그램 처리
 
 #### 히스토그램 평활화
 
@@ -525,11 +769,11 @@ clahe_result = clahe.apply(gray_image)
 ```
 
 **언제 사용하나:**
-- 대비가 낮은 이미지
-- 의료 영상 분석
-- 저조도 환경 이미지
+  - 대비가 낮은 이미지
+  - 의료 영상 분석
+  - 저조도 환경 이미지
 
-### 3. 노이즈 제거
+### 8.4. 노이즈 제거
 
 ```python
 # 가우시안 블러 - 일반적 노이즈 제거
@@ -544,16 +788,16 @@ bilateral = cv2.bilateralFilter(image, 9, 75, 75)
 
 ---
 
-## 이미지 증강(Data Augmentation)
+## 9. 이미지 증강(Data Augmentation)
 
-### 증강의 목적
+### 9.1. 증강의 목적
 
-1. **데이터 부족 해결**: 제한된 데이터셋 확장
-2. **과적합 방지**: 다양한 변형으로 일반화 성능 향상
-3. **불변성 학습**: 변환에 robust한 모델 구축
-4. **데이터 불균형 해결**: 클래스별 데이터 균형화
+  - ① **데이터 부족 해결**: 제한된 데이터셋 확장
+  - ② **과적합 방지**: 다양한 변형으로 일반화 성능 향상
+  - ③ **불변성 학습**: 변환에 robust한 모델 구축
+  - ④ **데이터 불균형 해결**: 클래스별 데이터 균형화
 
-### 1. 기하학적 변환
+### 9.2. 기하학적 변환
 
 #### 회전(Rotation)
 
@@ -564,9 +808,9 @@ rotated = cv2.warpAffine(image, rotation_matrix, (w, h))
 ```
 
 **권장 각도:**
-- 일반 객체: ±15도
-- 자연 이미지: ±30도  
-- 텍스트/숫자: ±10도 (가독성 고려)
+  - 일반 객체: ±15도
+  - 자연 이미지: ±30도  
+  - 텍스트/숫자: ±10도 (가독성 고려)
 
 #### 평행이동(Translation)
 
@@ -584,7 +828,7 @@ scale = random.uniform(0.8, 1.2)
 scaled = cv2.resize(image, None, fx=scale, fy=scale)
 ```
 
-### 2. 색상 및 밝기 변환
+### 9.3. 색상 및 밝기 변환
 
 #### 밝기 조정
 
@@ -602,7 +846,7 @@ contrast = random.uniform(0.7, 1.3)
 contrasted = np.clip((image - 128) * contrast + 128, 0, 255)
 ```
 
-### 3. 고급 증강 기법
+### 9.4. 고급 증강 기법
 
 #### 믹스업(Mixup)
 
@@ -622,7 +866,7 @@ mixed_label = λ × label1 + (1-λ) × label2
 라벨도 영역 비율에 따라 조합
 ```
 
-### 4. 증강 전략과 고려사항
+### 9.5. 증강 전략과 고려사항
 
 #### 태스크별 증강 전략
 
@@ -665,9 +909,9 @@ text_augmentations = [
 
 ---
 
-## 정규화의 장단점과 실제 적용
+## 10. 정규화의 장단점과 실제 적용
 
-### 정규화 방법들
+### 10.1. 정규화 방법들
 
 #### 1. 기본 정규화 방법
 
@@ -685,21 +929,21 @@ z_norm = (image - image.mean()) / image.std()
 imagenet_norm = (image/255.0 - [0.485, 0.456, 0.406]) / [0.229, 0.224, 0.225]
 ```
 
-### 정규화의 장점
+### 10.2. 정규화의 장점
 
-1. **훈련 안정성 향상**
-   - 그라디언트 크기 조절
-   - 수치적 안정성 확보
+  - ① **훈련 안정성 향상**
+     - 그라디언트 크기 조절
+     - 수치적 안정성 확보
 
-2. **수렴 속도 향상**
-   - 적절한 학습률 사용 가능
-   - 더 빠른 최적화
+  - ② **수렴 속도 향상**
+     - 적절한 학습률 사용 가능
+     - 더 빠른 최적화
 
-3. **사전훈련 모델 호환**
-   - Transfer Learning 시 필수
-   - 모델 간 일관성 유지
+  - ③ **사전훈련 모델 호환**
+     - Transfer Learning 시 필수
+     - 모델 간 일관성 유지
 
-### 정규화의 단점과 이미지 복원에서의 문제
+### 10.3. 정규화의 단점과 이미지 복원에서의 문제
 
 #### 1. 정보 손실 문제
 
@@ -724,7 +968,7 @@ dark_image = np.array([[20, 22, 24]])       # 어두운 이미지
 
 #### 3. 복원 태스크에서의 대안
 
-**1) 적응적 정규화**
+- **① 적응적 정규화**
 
 ```python
 # 지역적 정규화 - 패치별로 다른 정규화
@@ -742,7 +986,7 @@ def adaptive_normalization(image, patch_size=64):
     return normalized
 ```
 
-**2) 범위 보존 정규화**
+- **② 범위 보존 정규화**
 
 ```python
 # 원본 범위 정보 보존
@@ -757,7 +1001,7 @@ def denormalize(normalized, min_val, max_val):
     return normalized * (max_val - min_val) + min_val
 ```
 
-**3) 복원 전용 전처리**
+- **③ 복원 전용 전처리**
 
 ```python
 # 이미지 복원에 적합한 전처리
@@ -775,9 +1019,9 @@ def restoration_preprocessing(image):
     return processed
 ```
 
-### 복원 성능 저하 해결 방안
+### 10.4. 복원 성능 저하 해결 방안
 
-#### 1. 손실 함수 개선
+#### ① 손실 함수 개선
 
 ```python
 # 정규화된 공간에서의 손실보다 원본 공간 손실 사용
@@ -792,7 +1036,7 @@ def combined_loss(restored, target):
     pass
 ```
 
-#### 2. 네트워크 아키텍처 조정
+#### ② 네트워크 아키텍처 조정
 
 ```python
 # 복원용 네트워크 설계 시 고려사항
@@ -805,7 +1049,7 @@ class RestorationNetwork(nn.Module):
         pass
 ```
 
-#### 3. 훈련 전략 수정
+#### ③ 훈련 전략 수정
 
 ```python
 # 점진적 훈련 방법
@@ -818,9 +1062,9 @@ def progressive_training():
 
 ---
 
-## 주요 컴퓨터 비전 태스크
+## 11. 주요 컴퓨터 비전 태스크
 
-### 1. 이미지 분류(Image Classification)
+### 11.1. 이미지 분류(Image Classification)
 
 **목표**: 이미지 전체를 하나의 클래스로 분류
 
@@ -830,7 +1074,7 @@ def progressive_training():
 출력: {"고양이": 0.95, "개": 0.03, "새": 0.01, "기타": 0.01}
 ```
 
-### 2. 객체 탐지(Object Detection)
+### 11.2. 객체 탐지(Object Detection)
 
 **목표**: 이미지에서 여러 객체의 위치와 클래스를 동시에 찾기
 
@@ -843,7 +1087,7 @@ def progressive_training():
 ]
 ```
 
-### 3. 시맨틱 세그멘테이션(Semantic Segmentation)
+### 11.3. 시맨틱 세그멘테이션(Semantic Segmentation)
 
 **목표**: 픽셀 단위로 클래스 분류
 
@@ -854,7 +1098,7 @@ def progressive_training():
 [길  길  차  차 ]    [클래스3 클래스3 클래스4 클래스4]
 ```
 
-### 4. 인스턴스 세그멘테이션(Instance Segmentation)
+### 11.4. 인스턴스 세그멘테이션(Instance Segmentation)
 
 **시맨틱 vs 인스턴스 비교:**
 
@@ -865,28 +1109,28 @@ def progressive_training():
 
 ---
 
-## 유명한 CNN 아키텍처
+## 12. 유명한 CNN 아키텍처
 
-### 1. LeNet-5 (1998년)
+### 12.1. LeNet-5 (1998년)
 
 ```
 입력(32×32×1) → Conv1 → Pool1 → Conv2 → Pool2 → FC → 출력(10)
 ```
 
 **특징:**
-- 최초의 성공적인 CNN
-- 손글씨 숫자 인식용
-- 시그모이드 활성화 함수
+  - 최초의 성공적인 CNN
+  - 손글씨 숫자 인식용
+  - 시그모이드 활성화 함수
 
-### 2. AlexNet (2012년)
+### 12.2. AlexNet (2012년)
 
 **혁신 요소:**
-1. **ReLU 활성화 함수** 도입
-2. **드롭아웃**으로 과적합 방지  
-3. **GPU 병렬 처리** 활용
-4. **데이터 어그멘테이션** 적용
+  - ① **ReLU 활성화 함수** 도입
+  - ② **드롭아웃**으로 과적합 방지  
+  - ③ **GPU 병렬 처리** 활용
+  - ④ **데이터 어그멘테이션** 적용
 
-### 3. VGG (2014년)
+### 12.3. VGG (2014년)
 
 **핵심**: 작은 3×3 필터를 깊게 쌓기
 
@@ -896,7 +1140,7 @@ def progressive_training():
 - 3×3 필터 3개 = 27개 파라미터 (같은 수용영역, 더 적은 파라미터)
 ```
 
-### 4. ResNet (2015년)
+### 12.4. ResNet (2015년)
 
 **문제**: 깊은 네트워크의 그라디언트 소실
 
@@ -907,7 +1151,7 @@ def progressive_training():
 ResNet: H(x) = F(x) + x  ← 스킵 연결 추가
 ```
 
-### 5. EfficientNet (2019년)
+### 12.5. EfficientNet (2019년)
 
 **복합 스케일링**: 깊이 + 너비 + 해상도 동시 조정
 
@@ -920,47 +1164,47 @@ ResNet: H(x) = F(x) + x  ← 스킵 연결 추가
 
 ---
 
-## 실용 응용 분야
+## 13. 실용 응용 분야
 
-### 1. 자율주행
+### 13.1. 자율주행
 
 **핵심 기술:**
-- 차선 인식 (세그멘테이션)
-- 신호등 분류 (객체 탐지)
-- 보행자 추적 (다중 객체 추적)
+  - 차선 인식 (세그멘테이션)
+  - 신호등 분류 (객체 탐지)
+  - 보행자 추적 (다중 객체 추적)
 
-### 2. 의료 영상
+### 13.2. 의료 영상
 
 **응용 분야:**
-- X-ray 판독 보조
-- 피부암 진단
-- 망막 병변 탐지
+  - X-ray 판독 보조
+  - 피부암 진단
+  - 망막 병변 탐지
 
-### 3. 제조업
+### 13.3. 제조업
 
 **품질 관리:**
-- 표면 결함 탐지
-- 부품 조립 확인
-- 치수 측정 자동화
+  - 표면 결함 탐지
+  - 부품 조립 확인
+  - 치수 측정 자동화
 
-### 4. 보안 및 감시
+### 13.4. 보안 및 감시
 
 **기능:**
-- 얼굴 인식 출입 통제
-- 이상 행동 탐지
-- 차량 번호판 인식
+  - 얼굴 인식 출입 통제
+  - 이상 행동 탐지
+  - 차량 번호판 인식
 
-### 5. 소매업
+### 13.5. 소매업
 
 **활용:**
-- 무인 계산대
-- 재고 관리
-- 고객 행동 분석
+  - 무인 계산대
+  - 재고 관리
+  - 고객 행동 분석
 
 ---
 ---
 
-## 용어 정리
+## 14. 용어 정리
 
 ### A-C
 
@@ -1078,9 +1322,9 @@ ResNet: H(x) = F(x) + x  ← 스킵 연결 추가
 ---
 ---
 
-## 부록: 상세 구현 코드
+## 15. 부록: 상세 구현 코드
 
-### A. 완전한 이미지 분류 파이프라인
+### 15.1. 완전한 이미지 분류 파이프라인
 
 ```python
 import torch
@@ -1314,7 +1558,7 @@ if __name__ == "__main__":
     main()
 ```
 
-### B. 고급 데이터 증강 기법
+### 15.2. 고급 데이터 증강 기법
 
 ```python
 import cv2
@@ -1450,7 +1694,7 @@ class AdvancedAugmentation:
         
         return result, mixed_label
 
-### C. 이미지 복원을 위한 특별한 전처리
+### 15.3. 이미지 복원을 위한 특별한 전처리
 
 ```python
 class RestorationPreprocessor:
@@ -1517,7 +1761,7 @@ class RestorationPreprocessor:
         
         return np.clip(result, 0, 255).astype(np.uint8)
 
-### D. 모델 평가 및 시각화
+### 15.4. 모델 평가 및 시각화
 
 ```python
 import matplotlib.pyplot as plt
@@ -1670,7 +1914,7 @@ class ModelEvaluator:
         plt.tight_layout()
         plt.show()
 
-### E. 성능 최적화 및 배포
+### 15.5. 성능 최적화 및 배포
 
 ```python
 class ModelOptimizer:
@@ -1804,7 +2048,7 @@ if __name__ == "__main__":
     complete_pipeline_example()
 ```
 
-### F. 실시간 추론 시스템
+### 15.6. 실시간 추론 시스템
 
 ```python
 class RealTimeInference:
