--- a/스프린트미션_완료/미션5_4팀_김명환.md
+++ b/스프린트미션_완료/미션5_4팀_김명환.md
@@ -49,19 +49,20 @@ pragma: no-cache
 ## 2. 데이터셋 분석
 
 ### 2.1 데이터 소스
-- **출처**: [Kaggle - Denoising Dirty Documents](https://www.kaggle.com/competitions/denoising-dirty-documents/overview)
-- **형식**: PNG 이미지 파일
-- **구성**: 
-  - `train`: 손상된 문서 (144개)
-  - `train_cleaned`: 깨끗한 원본 문서 (144개)
-  - `test`: 테스트용 손상된 문서 (72개)
+
+   - **출처**: [Kaggle - Denoising Dirty Documents](https://www.kaggle.com/competitions/denoising-dirty-documents/overview)
+   - **형식**: PNG 이미지 파일
+   - **구성**: 
+     - `train`: 손상된 문서 (144개)
+     - `train_cleaned`: 깨끗한 원본 문서 (144개)
+     - `test`: 테스트용 손상된 문서 (72개)
 
 ### 2.2 데이터 특성
-- **문서 유형**: 텍스트, 그래픽 포함 문서
-- **노이즈 유형**: 얼룩, 블러, 압축 아티팩트, 스캔 노이즈
-- **이미지 크기**: 다양한 크기 (평균 540×420)
-- **채널**: 그레이스케일 (1채널)
-- **픽셀 분포**: 이진화 특성으로 0과 255에 집중된 쌍봉 분포
+  - **문서 유형**: 텍스트, 그래픽 포함 문서
+  - **노이즈 유형**: 얼룩, 블러, 압축 아티팩트, 스캔 노이즈
+  - **이미지 크기**: 다양한 크기 (평균 540×420)
+  - **채널**: 그레이스케일 (1채널)
+  - **픽셀 분포**: 이진화 특성으로 0과 255에 집중된 쌍봉 분포
 
 ---
 
@@ -78,17 +79,17 @@ ToDtype(torch.float32, scale=True)     # [0,1] 정규화
 ### 3.2 데이터 증강 기법
 
 #### 3.2.1 증강 기법 설계
-1. **RandomBlur**: 가우시안 블러 (스캔 품질 저하 시뮬레이션)
-2. **RandomJPEGCompression**: JPEG 압축 노이즈 (quality=1-3)
-3. **RandomStain**: 원형 얼룩 (커피, 물 얼룩 등)
-4. **PhotoshopDegradation**: 강한 압축 + 블록 노이즈
-5. **OnlyRotate**: 문서 회전 (-5°~5°)
+   - **RandomBlur**: 가우시안 블러 (스캔 품질 저하 시뮬레이션)
+   - **RandomJPEGCompression**: JPEG 압축 노이즈 (quality=1-3)
+   - **RandomStain**: 원형 얼룩 (커피, 물 얼룩 등)
+   - **PhotoshopDegradation**: 강한 압축 + 블록 노이즈
+   - **OnlyRotate**: 문서 회전 (-5°~5°)
 
 #### 3.2.2 증강 효과
-- **원본 데이터**: 144개
-- **증강 후**: 864개 (약 6배 증가)  
-    (※ `create_expanded_train_dataset*` 함수 선택 및 개별 증강 활성화 여부에 따라 6~7배 범위 변동 가능)
-- **검증 데이터**: 원본 비율 유지 (약 14~15개)
+   - **원본 데이터**: 144개
+   - **증강 후**: 864개 (약 6배 증가)  
+       (※ `create_expanded_train_dataset*` 함수 선택 및 개별 증강 활성화 여부에 따라 6~7배 범위 변동 가능)
+   - **검증 데이터**: 원본 비율 유지 (약 14~15개)
 
 ---
 
@@ -212,13 +213,14 @@ graph TD
 ```
 
 **범례**: 
-- 파란(Enc) / 연녹색(Dec) / 노랑(Bottleneck) 기본 경로
-- 분홍 Dropout 노드: v1에서 사용
-- 점선/회색 노드: v2에서 Dropout 제거 또는 에서 깊이 제거 영역
+   - 파란(Enc) / 연녹색(Dec) / 노랑(Bottleneck) 기본 경로
+   - 분홍 Dropout 노드: v1에서 사용
+   - 점선/회색 노드: v2에서 Dropout 제거 또는 에서 깊이 제거 영역
 
 **차이 요약**: v2는 Dropout 제거 및 초기화/스케줄링 개선으로 안정성 향상, 는 깊이 축소로 정보 손실 감소(흑백 텍스트 가장자리 보존)에 잠재력.
 
 ##### U-Net 변형 비교 (v1 → v2 개선 포인트)
+
 | 항목 | U-Net (model_u_net_st / 기본) | U-Net v2 (model_u_net2_*) | 기대 효과 |
 |------|-------------------------------|---------------------------|-----------|
 | Dropout | 일부 Conv 블록 뒤 Dropout2d(0.1) 존재 | 제거 (주석 처리) | 작은 데이터에서 과도한 정규화로 정보 손실 방지 → PSNR ↑ |
@@ -262,36 +264,39 @@ graph TD
 ## 5. 손실 함수 설계
 
 ### 5.1 기본 손실 함수
-- **L1 Loss**: 픽셀 단위 절대값 차이
-- **MSE Loss**: 픽셀 단위 제곱 차이
+   - **L1 Loss**: 픽셀 단위 절대값 차이
+   - **MSE Loss**: 픽셀 단위 제곱 차이
 
 ### 5.2 고급 및 복합 손실 함수
 
 #### 5.2.1 SSIM Loss
 구조적 유사성을 측정하는 손실 함수:
 
-$$\mathcal{L}_{SSIM} = 1 - \text{SSIM}(y_{pred}, y_{true})$$
-
-$$\text{SSIM}(x,y) = \frac{(2\mu_x \mu_y + C_1)(2\sigma_{xy} + C_2)}{(\mu_x^2 + \mu_y^2 + C_1)(\sigma_x^2 + \sigma_y^2 + C_2)}$$
+   - $\mathcal{L}_{SSIM} = 1 - \text{SSIM}(y_{pred}, y_{true})$
+   - $\text{SSIM}(x,y) = \frac{(2\mu_x \mu_y + C_1)(2\sigma_{xy} + C_2)}{(\mu_x^2 + \mu_y^2 + C_1)(\sigma_x^2 + \sigma_y^2 + C_2)}$
 
 여기서:
-- $\mu_x, \mu_y$: 각각 $x, y$의 평균
-- $\sigma_x^2, \sigma_y^2$: 각각 $x, y$의 분산
-- $\sigma_{xy}$: $x$와 $y$의 공분산
-- $C_1 = (k_1 \cdot L)^2$, $C_2 = (k_2 \cdot L)^2$ (안정성 상수)
+
+  - $\mu_x, \mu_y$: 각각 $x, y$의 평균
+  - $\sigma_x^2, \sigma_y^2$: 각각 $x, y$의 분산
+  - $\sigma_{xy}$: $x$와 $y$의 공분산
+  - $C_1 = (k_1 \cdot L)^2$, $C_2 = (k_2 \cdot L)^2$ (안정성 상수)
 
 #### 5.2.2 Perceptual Loss
 VGG16 사전훈련 모델을 사용한 고수준 특징 손실:
 
-$$\mathcal{L}_{perceptual} = \sum_{j} \frac{1}{N_j} |\phi_j(y_{pred}) - \phi_j(y_{true})|_2^2$$
+   - $\mathcal{L}_{perceptual} = \sum_{j} \frac{1}{N_j} |\phi_j(y_{pred}) - \phi_j(y_{true})|_2^2$
 
 #### 5.2.3 Triple Composite Loss (SSIM+L1+Perceptual)
-$$\mathcal{L}_{triple} = 0.6 \cdot \mathcal{L}_{L1} + 0.2 \cdot \mathcal{L}_{SSIM} + 0.2 \cdot \mathcal{L}_{perceptual}$$
+
+   - $\mathcal{L}_{triple} = 0.6 \cdot \mathcal{L}_{L1} + 0.2 \cdot \mathcal{L}_{SSIM} + 0.2 \cdot \mathcal{L}_{perceptual}$
 
 #### 5.2.4 Combined Loss (코드 combined_loss)
-$$\mathcal{L}_{combined} = \alpha \cdot \mathcal{L}_{MSE} + \beta \cdot \mathcal{L}_{perceptual},\; (\alpha=0.8, \beta=0.2)$$
+
+   - $\mathcal{L}_{combined} = \alpha \cdot \mathcal{L}_{MSE} + \beta \cdot \mathcal{L}_{perceptual},\; (\alpha=0.8, \beta=0.2)$
 
 #### 5.2.5 명칭 정리
+
 | 명칭 | 구성 | 비고 |
 |------|------|------|
 | L1 | L1 | 기본 픽셀 차이 |
@@ -348,17 +353,22 @@ $$\mathcal{L}_{combined} = \alpha \cdot \mathcal{L}_{MSE} + \beta \cdot \mathcal
 1. **U-Net vs AutoEncoder**: Skip connection이 성능에 미치는 영향이 매우 큼 (PSNR 30.44 → 35.21 dB, +15.7% 향상)
 
 2. **손실 함수 효과**: SSIM+L1+Perceptual 조합이 가장 효과적
+
    - 문서 이미지의 이진화 특성에 SSIM이 잘 맞음
    - VGG16 기반 Perceptual Loss가 텍스트 구조 보존에 도움
+
 3. **모델 깊이(기존 관찰 vs 추가 관찰)**: 초기 통합 실험에서는 U-Net v2(4단계)가 (3단계)를 PSNR 기준 상회했으나, 흑백(단일 채널) 복원 특성만 강조한 재실험에서 (shallower)가 과도한 압축 감소로 텍스트 에지 보존을 개선하는 경향이 관찰됨 (추가 검증 진행 필요).
-    - 가설: 채널/해상도 손실이 적어 세밀한 획 정보 유지 → 얕은 깊이가 이 데이터 규모/특성에서 더 적절할 가능성
-    - 향후: 동일 손실·스케줄러 조건 고정 후 다중 시드로 v2 vs  재평가
+
+   - 가설: 채널/해상도 손실이 적어 세밀한 획 정보 유지 → 얕은 깊이가 이 데이터 규모/특성에서 더 적절할 가능성
+   - 향후: 동일 손실·스케줄러 조건 고정 후 다중 시드로 v2 vs  재평가
 
 4. **어텐션 메커니즘**: 제한적 효과
+
    - 복잡도 대비 성능 향상이 미미 (35.21 vs 32.53 dB)
    - 하지만 standard U-Net 대비로는 상당한 개선 (26.03 → 32.53 dB)
 
 #### 6.2.3 추가 관찰: DenoisingUNet_ (얕은 깊이)의 잠재력
+
 | 항목 | U-Net v2 (4-depth) | U-Net  (3-depth) | 차이/가설 |
 |------|--------------------|--------------------|-----------|
 | 인코딩 단계 수 | 4 (최대 1024ch) | 3 (최대 512ch) | 는 중간 표현 압축 덜 함 |
@@ -368,39 +378,43 @@ $$\mathcal{L}_{combined} = \alpha \cdot \mathcal{L}_{MSE} + \beta \cdot \mathcal
 | 잠재 리스크 | 과소표현 위험 | 표현력 제한 | 데이터 규모 작아서 과대표현보다 이점 가능 |
 
 추가 검증 계획(제안):
-1. 동일 손실(Triple) + 동일 seed 다중(예: 5) 반복 → 평균/표준편차 비교
-2. Ablation: (a) 채널 축소 v2, (b)  + 채널 확대(최대 768ch) → 깊이 vs 폭 영향 분리
-3. Feature map 시각화: 얕은 모델의 중간 계층 경계 보존 여부 점검
-4. OCR 후처리 CER/WER 비교로 실사용 지표 확인
+
+   - 동일 손실(Triple) + 동일 seed 다중(예: 5) 반복 → 평균/표준편차 비교
+   - Ablation: (a) 채널 축소 v2, (b)  + 채널 확대(최대 768ch) → 깊이 vs 폭 영향 분리
+   - Feature map 시각화: 얕은 모델의 중간 계층 경계 보존 여부 점검
+   - OCR 후처리 CER/WER 비교로 실사용 지표 확인
 
 결론(중간): 는 현재 최고 수치는 아니지만 구조 단순화 대비 성능 잠재력이 있어 최적화 여지가 있음.
 
 ### 6.3 성능 분석
 
 #### 6.3.1 학습 안정성
-- **최고 성능 모델**: 약 15-20 epoch에서 수렴
-- **조기 종료**: patience=10으로 과적합 방지 효과적
-- **학습률 스케줄링**: CosineAnnealingWarmRestarts가 ReduceLROnPlateau보다 우수
+   - **최고 성능 모델**: 약 15-20 epoch에서 수렴
+   - **조기 종료**: patience=10으로 과적합 방지 효과적
+   - **학습률 스케줄링**: CosineAnnealingWarmRestarts가 ReduceLROnPlateau보다 우수
 
 #### 6.3.2 데이터 증강 효과
-- 약 6배 확장으로 과적합 완화 및 PSNR 안정화
-- 블러/압축/얼룩/블록/경미 회전 → 실제 스캔/촬영 잡음 근사
-- 회전 범위를 좁혀(±5°) 텍스트 기울기 왜곡 최소화
-- 추가 잠재 증강: 밝기/대비, 랜덤 커팅/국부 얼룩, 합성 잉크 번짐
+   - 약 6배 확장으로 과적합 완화 및 PSNR 안정화
+   - 블러/압축/얼룩/블록/경미 회전 → 실제 스캔/촬영 잡음 근사
+   - 회전 범위를 좁혀(±5°) 텍스트 기울기 왜곡 최소화
+   - 추가 잠재 증강: 밝기/대비, 랜덤 커팅/국부 얼룩, 합성 잉크 번짐
 
 ### 6.4 시각적 결과 분석
 
 #### 6.4.1 최고 성능 모델 (model_u_net2_ssim)
-- **텍스트 복원**: 선명한 문자 경계 복원
-- **배경 정리**: 효과적인 노이즈 제거
-- **구조 보존**: 원본 문서 레이아웃 유지
+
+   - **텍스트 복원**: 선명한 문자 경계 복원
+   - **배경 정리**: 효과적인 노이즈 제거
+   - **구조 보존**: 원본 문서 레이아웃 유지
+
 ![이미지](https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/미션5_4팀_김명환/DenoisingUNet_v2_history_20250813_233045_val.png)<br/>
 ![이미지](https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/미션5_4팀_김명환/DenoisingUNet_v2_history_20250813_233045_test.png)<br/>
 
 #### 6.4.2 기본 모델 (model_base) 대비 개선점
-- 텍스트 가독성 대폭 향상
-- 배경 노이즈 완전 제거
-- 문서 구조적 일관성 유지
+   - 텍스트 가독성 대폭 향상
+   - 배경 노이즈 완전 제거
+   - 문서 구조적 일관성 유지
+
 ![이미지](https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/미션5_4팀_김명환/DenoisingUNetSt_history_20250815_011658_val.png)<br/>
 ![이미지](https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/미션5_4팀_김명환/DenoisingUNetSt_history_20250815_011658_test.png)<br/>
 
@@ -411,15 +425,17 @@ $$\mathcal{L}_{combined} = \alpha \cdot \mathcal{L}_{MSE} + \beta \cdot \mathcal
 ### 7.1 연구 성과
 
 #### 7.1.1 핵심 기술적 기여
-1. **아키텍처 선택**: U-Net의 Skip Connection이 문서 노이즈 제거에 핵심적
-2. **손실 함수 설계**: SSIM+L1+Perceptual 조합이 문서 이미지에 최적
-3. **데이터 증강**: 실제 스캔 환경을 고려한 증강 기법의 효과 검증
+
+   - **아키텍처 선택**: U-Net의 Skip Connection이 문서 노이즈 제거에 핵심적
+   - **손실 함수 설계**: SSIM+L1+Perceptual 조합이 문서 이미지에 최적
+   - **데이터 증강**: 실제 스캔 환경을 고려한 증강 기법의 효과 검증
 
 #### 7.1.2 성능 달성
-- **최고 PSNR**: 35.21 dB (우수한 품질 수준)
-- **평가 신뢰성 주의**: 소규모(≈14 val) 단일 시드 → 재실행 변동 가능 (추후 k-fold 권장)
-- **실용적 성능**: 실제 문서 복원에 충분한 품질
-- **학습 효율성**: 적절한 에폭 수로 안정적 수렴
+
+   - **최고 PSNR**: 35.21 dB (우수한 품질 수준)
+   - **평가 신뢰성 주의**: 소규모(≈14 val) 단일 시드 → 재실행 변동 가능 (추후 k-fold 권장)
+   - **실용적 성능**: 실제 문서 복원에 충분한 품질
+   - **학습 효율성**: 적절한 에폭 수로 안정적 수렴
 
 ### 7.2 모델별 특성 요약
 
@@ -434,21 +450,24 @@ $$\mathcal{L}_{combined} = \alpha \cdot \mathcal{L}_{MSE} + \beta \cdot \mathcal
 ### 7.3 향후 연구 방향
 
 #### 7.3.1 기술적 개선
-1. **Transformer 기반 모델**: Vision Transformer 적용 가능성 탐구
-2. **GAN 기반 접근**: 생성적 적대 신경망으로 더 자연스러운 복원
-3. **다해상도 학습**: Progressive training 최적화
+
+   - **Transformer 기반 모델**: Vision Transformer 적용 가능성 탐구
+   - **GAN 기반 접근**: 생성적 적대 신경망으로 더 자연스러운 복원
+   - **다해상도 학습**: Progressive training 최적화
 
 #### 7.3.2 데이터셋 확장
-1. **다양한 언어**: 한글, 중국어 등 다국어 문서 실험
-2. **실제 환경**: 스마트폰 촬영, 팩스 전송 등 실제 노이즈
-3. **합성 데이터**: 더 다양한 노이즈 패턴 생성
+
+   - **다양한 언어**: 한글, 중국어 등 다국어 문서 실험
+   - **실제 환경**: 스마트폰 촬영, 팩스 전송 등 실제 노이즈
+   - **합성 데이터**: 더 다양한 노이즈 패턴 생성
 
 #### 7.3.3 실용화 방안
-1. **모바일 최적화**: 경량화 모델 개발
-2. **실시간 처리**: 온라인 문서 스캔 서비스 적용
-3. **도메인 특화**: 의료, 법률 문서 등 특수 분야 적용
+   - **모바일 최적화**: 경량화 모델 개발
+   - **실시간 처리**: 온라인 문서 스캔 서비스 적용
+   - **도메인 특화**: 의료, 법률 문서 등 특수 분야 적용
 
 ### 7.4 재현성 (Reproducibility) 체크리스트
+
 | 항목 | 설정 | 비고 |
 |------|------|------|
 | Seed | 42 고정 | torch/numpy/random/cuda |
@@ -469,13 +488,13 @@ $$\mathcal{L}_{combined} = \alpha \cdot \mathcal{L}_{MSE} + \beta \cdot \mathcal
 ### A.1 핵심 수식
 
 **RMSE (Root Mean Square Error)**:
-$$\text{RMSE} = \sqrt{ \frac{1}{N} \sum_{i=1}^{N} \left( \hat{x}_i - x_i \right)^2 }$$
+- $\text{RMSE} = \sqrt{ \frac{1}{N} \sum_{i=1}^{N} \left( \hat{x}_i - x_i \right)^2 }$
 
 **PSNR (Peak Signal-to-Noise Ratio)**:
-$$\text{PSNR} = 20 \cdot \log_{10}(MAX_I) - 10 \cdot \log_{10}(\text{MSE})$$
+- $\text{PSNR} = 20 \cdot \log_{10}(MAX_I) - 10 \cdot \log_{10}(\text{MSE})$
 
 **복합 손실 함수**:
-$$\mathcal{L}_{total} = w_{L1} \cdot \mathcal{L}_{L1} + w_{SSIM} \cdot \mathcal{L}_{SSIM} + w_{perceptual} \cdot \mathcal{L}_{perceptual}$$
+- $\mathcal{L}_{total} = w_{L1} \cdot \mathcal{L}_{L1} + w_{SSIM} \cdot \mathcal{L}_{SSIM} + w_{perceptual} \cdot \mathcal{L}_{perceptual}$
 
 ### A.2 하드웨어 요구사항
 
@@ -486,36 +505,41 @@ $$\mathcal{L}_{total} = w_{L1} \cdot \mathcal{L}_{L1} + w_{SSIM} \cdot \mathcal{
 | Attention U-Net | 12GB | 4-6 | 4시간 | 0.5초 |
 
 ### A.4 추가 고려 사항
-1. AMP(Mixed Precision) 적용 시 VRAM 절감 및 10~20% 속도 향상 기대
-2. 추론 경량화: ONNX/TensorRT 변환 → 배치=1 지연시간 감소
-3. 채널 축소(base_ch 64→48) 및 Depthwise Conv 실험 여지
-4. 추가 지표: SSIM, OCR 정확도(텍스트 인식 후 CER/WER) 연계 평가
+
+  - AMP(Mixed Precision) 적용 시 VRAM 절감 및 10~20% 속도 향상 기대
+  - 추론 경량화: ONNX/TensorRT 변환 → 배치=1 지연시간 감소
+  - 채널 축소(base_ch 64→48) 및 Depthwise Conv 실험 여지
+  - 추가 지표: SSIM, OCR 정확도(텍스트 인식 후 CER/WER) 연계 평가
 
 ### A.3 데이터 분포 특성
 
 #### A.3.1 픽셀 값 분포
-- **쌍봉 분포**: 0 (배경)과 255 (텍스트)에 집중
-- **중간값 비율**: 전체 픽셀의 약 5% 미만
-- **노이즈 패턴**: 가우시안보다 임펄스 노이즈 형태
+
+  - **쌍봉 분포**: 0 (배경)과 255 (텍스트)에 집중
+  - **중간값 비율**: 전체 픽셀의 약 5% 미만
+  - **노이즈 패턴**: 가우시안보다 임펄스 노이즈 형태
 
 #### A.3.2 이미지 크기 분포
-- **평균 크기**: 540×420 픽셀
-- **종횡비**: 4:3이 가장 일반적
-- **정규화**: 512×512로 패딩 후 학습
+
+  - **평균 크기**: 540×420 픽셀
+  - **종횡비**: 4:3이 가장 일반적
+  - **정규화**: 512×512로 패딩 후 학습
 
 ---
 
 ## 📝 참고문헌
 
 ### 주요 논문
-1. Ronneberger, O., et al. (2015). "U-Net: Convolutional Networks for Biomedical Image Segmentation"
-2. He, K., et al. (2016). "Deep Residual Learning for Image Recognition"
-3. Wang, Z., et al. (2004). "Image Quality Assessment: From Error Visibility to Structural Similarity"
+
+  - Ronneberger, O., et al. (2015). "U-Net: Convolutional Networks for Biomedical Image Segmentation"
+  - He, K., et al. (2016). "Deep Residual Learning for Image Recognition"
+  - Wang, Z., et al. (2004). "Image Quality Assessment: From Error Visibility to Structural Similarity"
 
 ### 데이터셋 및 도구
-- **데이터셋**: [Kaggle - Denoising Dirty Documents](https://www.kaggle.com/competitions/denoising-dirty-documents)
-- **프레임워크**: PyTorch 2.0+
-- **시각화**: Matplotlib, TensorBoard
+
+  - **데이터셋**: [Kaggle - Denoising Dirty Documents](https://www.kaggle.com/competitions/denoising-dirty-documents)
+  - **프레임워크**: PyTorch 2.0+
+  - **시각화**: Matplotlib, TensorBoard
 
 ---
 
