--- a/Learning/learning_이미지분류.ipynb
+++ b/Learning/learning_이미지분류.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -200,6 +200,7 @@
     "import torch.nn.functional as F\n",
     "import torch.optim as optim\n",
     "import torchvision\n",
+    "import math\n",
     "from torch.utils.data import DataLoader\n",
     "from torchvision import datasets\n",
     "from torchvision.transforms import v2\n",
@@ -207,6 +208,9 @@
     "from tqdm.auto import tqdm\n",
     "\n",
     "class CNNModel(nn.Module):\n",
+    "    def outsize(self, input_size, kernel_size, padding, stride):\n",
+    "        return math.floor(input_size + 2 * padding - (kernel_size -1) -1) / stride + 1\n",
+    "    \n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "        self.conv1 = nn.Conv2d(1, 32, 3, 1, 1)\n",
