--- a/위클리페이퍼/위클리_페이퍼_6_AI4기_김명환.md
+++ b/위클리페이퍼/위클리_페이퍼_6_AI4기_김명환.md
@@ -282,10 +282,7 @@ graph TD
     - 계산이 빠르고 기울기 소실 문제를 완화
 
 **Leaky ReLU - 리키 렐루**:
-  - $\Large{f(x) = \begin{cases} 
-x & \text{if } x > 0 \\
-\alpha x & \text{if } x \leq 0
-\end{cases}}$
+  - $\Large{f(x) = \begin{cases} x & \text{if } x > 0 \\ \alpha x & \text{if } x \leq 0 \end{cases}}$
 
 ### 1.6 풀링층 (Pooling Layer)
 
