--- a/스프린트미션_완료/06_4팀_김명환.md
+++ b/스프린트미션_완료/06_4팀_김명환.md
@@ -36,7 +36,7 @@ pragma: no-cache
 - **검증**: 8개 Normal, 8개 Pneumonia (통계적으로 부족)
 - **테스트**: 234개 Normal, 390개 Pneumonia
 
-<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/데이타불균형.png"/>
+<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/데이타불균형.png" width="400px"/>
 
 ### 2.2 데이터 품질 개선
 **중복 데이터 제거**
@@ -63,17 +63,17 @@ pragma: no-cache
 
 - 증강데이타 검토
 
-<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/brightness.png"/>
+<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/brightness.png" width="400px"/>
 
-<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/contrast.png"/>
+<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/contrast.png" width="400px"/>
 
-<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/rotation.png"/>
+<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/rotation.png" width="400px"/>
 
-<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/클레스별이미지셈플.png"/>
+<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/클레스별이미지셈플.png" width="400px"/>
 
 - 히스토그램 검토
 
-<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/히스토그램.png"/>
+<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/히스토그램.png" width="400px"/>
 
 
 ### 2.4 최종 데이터셋 구성
@@ -81,7 +81,7 @@ pragma: no-cache
 - **검증**: 1,016개 (Normal 508개, Pneumonia 508개) - 통계적 유의성 확보
 - **테스트**: 618개 (Normal 231개, Pneumonia 387개) - 원본 분포 유지
 
-<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/시험데이타균형.png"/>
+<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/시험데이타균형.png" width="400px"/>
 
 ---
 
@@ -123,13 +123,13 @@ pragma: no-cache
 | 2 | **DenseNet-121** | Frozen | **0.867** | 0.822 | 0.992 | 0.658 | 0.860 |
 | 3 | **ResNet-50** | Frozen | **0.841** | 0.715 | 0.951 | 0.658 | 0.835 |
 
-<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/모델성능비교.png"/>
+<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/모델성능비교.png" width="400px"/>
 
-<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/시험_모델성능비교.png"/>
+<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/시험_모델성능비교.png" width="400px"/>
 
 - Grad-CAM (참고)
 
-<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/Grad-CAM_정상.png" width="49%" height="49%"/> <img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/Grad-CAM_폐암.png" width="49%" height="49%"/>
+<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/Grad-CAM_정상.png" width="300px"/> <img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/Grad-CAM_폐암.png" width="300px"/>
 
 
 ### 4.2 Fine-Tuning 전략별 분석
