--- a/스프린트미션_완료/06_4팀_김명환.md
+++ b/스프린트미션_완료/06_4팀_김명환.md
@@ -3,6 +3,7 @@ layout: default
 title: 흉부 X-Ray 폐렴 분류 프로젝트 보고서
 description: 흉부 X-Ray 폐렴 분류 프로젝트 보고서
 cache-control: no-cache
+date: 2025-08-23
 expires: 0
 pragma: no-cache
 ---
