--- a/위클리페이퍼/위클리_페이퍼_7_AI4기_김명환.md
+++ b/위클리페이퍼/위클리_페이퍼_7_AI4기_김명환.md
@@ -1,14 +1,14 @@
 ---
 layout: default
-title: "위클리페이퍼6 4팀_김명환 - CNN과 오토인코더"
-description: "CNN과 오토인코더"
-date: 2025-08-16
+title: "위클리페이퍼7 4팀_김명환 - 이미지 전처리와 전이학습"
+description: "이미지 전처리와 전이학습"
+date: 2025-08-24
 cache-control: no-cache
 expires: 0
 pragma: no-cache
 ---
 
-# 위클리페이퍼 #7: 이미지 전처리, 전이학습,
+# 위클리페이퍼 #7: 이미지 전처리, 전이학습
 
 # 이미지 전처리와 전이학습
 ## 딥러닝을 위한 이미지 데이터 준비 및 학습 최적화
@@ -40,7 +40,7 @@ pragma: no-cache
 
 ## 1. 이미지 전처리의 필요성
 
-이미지 데이터를 딥러닝 모델에 입력하기 전에 반드시 거쳐야 하는 과정이 **전처리(preprocessing)**입니다. 원시 이미지 데이터는 크기, 해상도(resolution), 픽셀 값의 범위가 제각각이기 때문에 모델이 효과적으로 학습할 수 있도록 표준화된 형태로 변환해야 합니다.
+이미지 데이터를 딥러닝 모델에 입력하기 전에 반드시 거쳐야 하는 과정이 **전처리(preprocessing 프리프로세싱)**입니다. 원시 이미지 데이터는 크기, 해상도(resolution 레졸루션), 픽셀 값의 범위가 제각각이기 때문에 모델이 효과적으로 학습할 수 있도록 표준화된 형태로 변환해야 합니다.
 
 ### 1.1. 리사이징(Resizing)
 
@@ -48,9 +48,9 @@ pragma: no-cache
 
 #### 1.1.1. 리사이징이 필요한 이유
 
-**배치 처리(Batch Processing) 요구사항**
+**배치 처리(Batch Processing 배치 프로세싱) 요구사항**
 - 딥러닝 모델은 여러 이미지를 한 번에 처리하는 배치 단위로 학습
-- 텐서(tensor) 연산을 위해 모든 입력 데이터의 차원(dimension)이 동일해야 함
+- 텐서(tensor 텐서) 연산을 위해 모든 입력 데이터의 차원(dimension 디멘션)이 동일해야 함
 - 예: 224×224×3 크기로 통일
 
 **메모리 효율성**
@@ -58,7 +58,7 @@ pragma: no-cache
 - 4K 이미지(3840×2160)를 그대로 사용하면 GPU 메모리 부족 발생 가능
 - 적절한 크기로 조정하여 메모리 사용량 최적화
 
-#### 1.1.2. 리사이징 방법
+#### 1.1.2. 리사이징 방법과 보간법(Interpolation)
 
 ```mermaid
 graph TD
@@ -71,41 +71,101 @@ graph TD
     F --> G["리사이징된 이미지"]
 ```
 
-**주요 보간법(Interpolation Methods)**
-- **최근접 이웃(Nearest Neighbor)**: 가장 빠르지만 품질 저하
-- **이중선형(Bilinear)**: 속도와 품질의 균형
-- **바이큐빅(Bicubic)**: 고품질이지만 연산 시간 증가
+**보간법(Interpolation 인터폴레이션)**은 알려진 픽셀 값들 사이의 새로운 픽셀 값을 추정하는 수학적 기법입니다.
+
+**주요 보간법 비교**
+
+| 보간법 | 사용 픽셀 수 | 계산 방법 | 품질 | 속도 | 용도 |
+|--------|-------------|-----------|------|------|------|
+| **최근접 이웃<br/>(Nearest Neighbor)** | 1개 | 가장 가까운 픽셀값 선택 | 낮음<br/>(계단 현상) | 가장 빠름 | 실시간 처리<br/>이진 이미지 |
+| **이중선형<br/>(Bilinear)** | 4개 | 거리 기반 가중평균<br/>$P = A×w_1 + B×w_2 + C×w_3 + D×w_4$ | 보통<br/>(적당히 부드러움) | 보통 | 일반적 용도<br/>대부분 상황 |
+| **바이큐빅<br/>(Bicubic)** | 16개 | 3차 함수 기반 가중평균<br/>4×4 영역 고려 | 높음<br/>(매우 부드러움) | 느림 | 고품질 확대<br/>전문 이미지 편집 |
+
+**핵심 개념**: 단순 평균이 아닌 **거리 기반 가중평균**
+- 가까운 픽셀일수록 더 큰 영향 (높은 가중치)
+- 먼 픽셀일수록 더 작은 영향 (낮은 가중치)
 
 ### 1.2. 정규화(Normalization)
 
 **정규화**는 픽셀 값의 범위를 조정하여 모델 학습을 안정화하는 과정입니다.
 
-#### 1.2.1. 정규화가 필요한 이유
+#### 1.2.1. 정규화가 필요한 이유 - 기울기 문제 해결
 
-**그라디언트 폭발/소실 방지**
-- 원시 픽셀 값: 0~255 (8비트 이미지)
-- 큰 입력 값은 그라디언트(gradient) 폭발을 야기
-- 작은 그라디언트는 바니싱 그라디언트(vanishing gradient) 문제 발생
+**그라디언트(기울기) 폭발/소실 방지가 핵심**
+```mermaid
+graph TD
+    A["원시 픽셀값<br/>(0~255)"] --> B["큰 입력값"]
+    B --> C["큰 활성화값"]
+    C --> D["큰 기울기"]
+    D --> E["기울기 폭발<br/>(Gradient Explosion)"]
+    
+    F["정규화된 픽셀값<br/>(0～1 또는 −0～1)"] --> G["적절한 입력값"]
+    G --> H["안정적인 활성화"]
+    H --> I["적절한 기울기"]
+    I --> J["안정적인 학습"]
+```
 
-**학습 속도 향상**
-- 정규화된 데이터는 옵티마이저(optimizer)가 더 효율적으로 동작
+**역전파 시 기울기 문제**
+- 연쇄법칙(Chain Rule)에 의해 기울기가 레이어마다 곱해짐
+- 큰 값들이 계속 곱해지면 → **기울기 폭발** (Gradient Explosion)
+- 작은 값들이 계속 곱해지면 → **기울기 소실** (Vanishing Gradient)
+
+**부가적 효과들**
+- 학습 속도 향상: 옵티마이저(optimizer)가 더 효율적으로 동작
 - 각 피처(feature)의 스케일이 유사해져 학습 안정성 증대
 
 #### 1.2.2. 정규화 방법
 
-**민-맥스 정규화(Min-Max Normalization)**
+**1) 민-맥스 정규화(Min-Max Normalization)**
 - $X_{normalized} = \frac{X - X_{min}}{X_{max} - X_{min}}$
-- 결과: [0, 1] 범위
-- 이미지의 경우: 픽셀값을 255로 나누기
+  - 결과: [0, 1] 범위
+  - 이미지의 경우: 픽셀값을 255로 나누기
+  - 간단하지만 이상치(outlier)에 민감
 
-**Z-스코어 정규화(Z-score Normalization)**
-- $X_{normalized} = \frac{X - \mu}{\sigma}$
-여기서 μ는 평균(mean), σ는 표준편차(standard deviation)
+**2) Z-스코어 정규화(Z-score Normalization)**
+- $Z = \frac{X - \mu}{\sigma}$
 
-**ImageNet 통계 기반 정규화**
-- 평균: [0.485, 0.456, 0.406] (RGB 채널별)
-- 표준편차: [0.229, 0.224, 0.225] (RGB 채널별)
-- 사전훈련된 모델 사용 시 필수
+  - 여기서 μ는 평균(mean), σ는 표준편차(standard deviation)
+
+**Z-스코어의 직관적 의미**
+- "평균에서 얼마나 떨어져 있는가?"를 표준편차 단위로 표현
+- 결과: 평균 0, 표준편차 1인 표준정규분포
+- 대부분 값이 -3 ~ +3 범위에 분포 (99.7%)
+
+**3) ImageNet 통계 기반 정규화 (중요!)**
+
+```python
+# 사전훈련된 모델 사용 시 반드시 이 값 사용
+mean = [0.485, 0.456, 0.406]  # RGB 채널별 평균
+std = [0.229, 0.224, 0.225]   # RGB 채널별 표준편차
+
+# 1400만 장의 ImageNet에서 계산된 고정값
+normalized = (image - mean) / std
+```
+
+#### 1.2.3. ImageNet vs 자체 데이터 통계값 비교
+
+**ImageNet 통계값 사용**
+
+| 장점 | 단점 |
+|------|------|
+| ✅ **사전훈련 모델과 동일한 입력 분포** | ❌ 내 데이터와 분포 차이 가능 |
+| ✅ 전이학습 효과 최대화 | ❌ 도메인 특성 반영 안 됨 |
+| ✅ 빠른 처리 (계산 불필요) |  |
+| ✅ 검증된 통계값 (1400만 장 기반) |  |
+
+**자체 데이터 통계값 사용**
+
+| 장점 | 단점 |
+|------|------|
+| ✅ 내 데이터에 완벽히 맞춤 | ❌ **사전훈련 효과 상실** |
+| ✅ 도메인 특성 반영 | ❌ 추가 계산 비용 |
+| ✅ 이론적으로 최적의 정규화 | ❌ 작은 데이터셋에서 부정확 |
+
+**실무 가이드라인**
+- **사전훈련 모델 사용 → ImageNet 통계값 필수** 🎯
+- 자연 이미지와 완전히 다른 도메인(의료, 위성 등) → 자체 통계값 고려
+- **핵심**: 전이학습의 이점 vs 도메인 적합성의 트레이드오프
 
 ### 1.3. 전처리가 모델 성능에 미치는 영향
 
@@ -126,14 +186,14 @@ graph LR
 
 ### 2.1. 데이터 증강의 개념과 필요성
 
-**데이터 증강**은 기존 훈련 데이터에 다양한 변환을 적용하여 데이터셋의 크기와 다양성을 인위적으로 늘리는 기법입니다.
+**데이터 증강(Data Augmentation 데이터 어그멘테이션)**은 기존 훈련 데이터에 다양한 변환을 적용하여 데이터셋의 크기와 다양성을 인위적으로 늘리는 기법입니다.
 
 #### 2.1.1. 데이터 증강이 필요한 이유
 
 **오버피팅(Overfitting) 방지**
 - 제한된 훈련 데이터로 인한 과적합 문제 해결
-- 모델의 일반화(generalization) 성능 향상
-- 테스트 데이터에 대한 강건성(robustness) 증대
+- 모델의 일반화(generalization 제너럴라이제이션) 성능 향상
+- 테스트 데이터에 대한 강건성(robustness 로버스트니스) 증대
 
 **데이터 부족 문제 해결**
 - 의료 이미지, 위성 이미지 등 수집이 어려운 도메인
@@ -223,8 +283,8 @@ graph TD
 **가우시안 노이즈(Gaussian Noise)**
 - $I_{noisy} = I_{original} + N(0, \sigma^2)$
 
-- **목적**: 센서 노이즈, 압축 아티팩트(artifact) 시뮬레이션
-- **효과**: 실제 환경의 불완전한 이미지에 대한 강건성
+  - **목적**: 센서 노이즈, 압축 아티팩트(artifact) 시뮬레이션
+  - **효과**: 실제 환경의 불완전한 이미지에 대한 강건성
 
 #### 2.4.2. 컷아웃(Cutout)
 
@@ -237,9 +297,9 @@ graph TD
 - $\tilde{x} = \lambda x_i + (1-\lambda) x_j$
 - $\tilde{y} = \lambda y_i + (1-\lambda) y_j$
 
-- 두 이미지를 선형 결합
-- 라벨도 같은 비율로 혼합
-- 결정 경계(decision boundary) 부드럽게 만들기
+  - 두 이미지를 선형 결합
+  - 라벨도 같은 비율로 혼합
+  - 결정 경계(decision boundary) 부드럽게 만들기
 
 ---
 
@@ -247,7 +307,7 @@ graph TD
 
 ### 3.1. 전이학습의 개념
 
-**전이학습**은 한 도메인(source domain)에서 학습된 지식을 다른 도메인(target domain)에 적용하는 머신러닝 기법입니다. 딥러닝에서는 사전훈련된 모델(pre-trained model)을 새로운 작업에 재활용하는 방식으로 구현됩니다.
+**전이학습(Transfer Learning 트랜스퍼 러닝)**은 한 도메인(source domain)에서 학습된 지식을 다른 도메인(target domain)에 적용하는 머신러닝 기법입니다. 딥러닝에서는 사전훈련된 모델(pre-trained model)을 새로운 작업에 재활용하는 방식으로 구현됩니다.
 
 #### 3.1.1. 전이학습의 핵심 아이디어
 
@@ -418,22 +478,22 @@ graph TD
 **성능 지표(Metrics)**
 
 **정확도(Accuracy)**
-$Accuracy = \frac{TP + TN}{TP + TN + FP + FN}$
-- 전체 예측 중 올바른 예측의 비율
-- 클래스 불균형 시 오해의 소지 있음
+- $Accuracy = \frac{TP + TN}{TP + TN + FP + FN}$
+  - 전체 예측 중 올바른 예측의 비율
+  - 클래스 불균형 시 오해의 소지 있음
 
 **정밀도(Precision)와 재현율(Recall)**
-$Precision = \frac{TP}{TP + FP}$
-$Recall = \frac{TP}{TP + FN}$
-- Precision: 양성으로 예측한 것 중 실제 양성인 비율
-- Recall: 실제 양성 중 올바르게 예측한 비율
+- $Precision = \frac{TP}{TP + FP}$
+- $Recall = \frac{TP}{TP + FN}$
+  - Precision: 양성으로 예측한 것 중 실제 양성인 비율
+  - Recall: 실제 양성 중 올바르게 예측한 비율
 
 **F1 스코어(F1-Score)**
-$F1 = 2 \times \frac{Precision \times Recall}{Precision + Recall}$
-- 정밀도와 재현율의 조화평균(harmonic mean)
-- 클래스 불균형 상황에서 유용한 단일 지표
-- 0과 1 사이의 값, 높을수록 좋음
-- 정밀도와 재현율이 균형잡힐 때 높은 값
+- $F1 = 2 \times \frac{Precision \times Recall}{Precision + Recall}$
+  - 정밀도와 재현율의 조화평균(harmonic mean)
+  - 클래스 불균형 상황에서 유용한 단일 지표
+  - 0과 1 사이의 값, 높을수록 좋음
+  - 정밀도와 재현율이 균형잡힐 때 높은 값
 
 **AUC-ROC (Area Under the ROC Curve)**
 - ROC 곡선 아래 면적
@@ -520,15 +580,27 @@ graph TD
 
 **전처리(Preprocessing 프리프로세싱)**: 모델 입력 전 데이터를 준비하는 과정
 
-**리사이징(Resizing)**: 이미지 크기를 조정하는 작업
+**리사이징(Resizing 리사이징)**: 이미지 크기를 조정하는 작업
 
 **정규화(Normalization 노멀라이제이션)**: 데이터의 범위나 분포를 표준화하는 과정
 
-**보간법(Interpolation 인터폴레이션)**: 픽셀 사이 값을 추정하는 방법
+**보간법(Interpolation 인터폴레이션)**: 알려진 데이터 포인트들 사이의 값을 추정하는 수학적 기법
+
+**최근접 이웃(Nearest Neighbor)**: 가장 가까운 픽셀값을 선택하는 보간법
+
+**이중선형(Bilinear 바이리니어)**: 주변 4개 픽셀의 거리 기반 가중평균을 사용하는 보간법
+
+**바이큐빅(Bicubic 바이큐빅)**: 주변 16개 픽셀을 3차 함수로 보간하는 고품질 보간법
 
 **그라디언트(Gradient 그래디언트)**: 가중치 업데이트를 위한 기울기
 
-**바니싱 그라디언트(Vanishing Gradient 배니싱 그래디언트)**: 기울기가 소실되는 현상
+**기울기 폭발(Gradient Explosion)**: 기울기가 너무 커져서 학습이 불안정해지는 현상
+
+**기울기 소실(Vanishing Gradient 배니싱 그래디언트)**: 기울기가 너무 작아져서 학습이 진행되지 않는 현상
+
+**Z-스코어(Z-score)**: 평균에서 표준편차 몇 배 떨어져 있는지를 나타내는 정규화 방법
+
+**ImageNet 정규화**: 사전훈련된 모델 사용 시 필수인 고정된 평균/표준편차 값으로 정규화
 
 **데이터 증강(Data Augmentation 데이터 어그멘테이션)**: 데이터의 다양성을 인위적으로 늘리는 기법
 
@@ -548,14 +620,42 @@ graph TD
 
 **피처 추출(Feature Extraction 피처 익스트랙션)**: 데이터에서 유용한 특징을 뽑아내는 과정
 
+**점진적 해동(Gradual Unfreezing)**: 레이어를 단계적으로 훈련 가능하게 만드는 기법
+
+**차등 학습률(Differential Learning Rates)**: 레이어별로 다른 학습률을 적용하는 방법
+
+**교차 검증(Cross-Validation)**: 데이터를 여러 폴드로 나누어 모델 성능을 평가하는 방법
+
+**K-폴드(K-Fold)**: 데이터를 K개 그룹으로 나누어 검증하는 교차 검증 방법
+
+**계층화 샘플링(Stratified Sampling)**: 클래스 비율을 유지하며 데이터를 분할하는 방법
+
+**정밀도(Precision 프리시전)**: 양성 예측 중 실제 양성인 비율
+
+**재현율(Recall 리콜)**: 실제 양성 중 올바르게 예측한 비율
+
+**F1 스코어(F1-Score)**: 정밀도와 재현율의 조화평균
+
+**AUC-ROC**: ROC 곡선 아래 면적으로 분류 성능을 평가하는 지표
+
+**그라드-CAM(Grad-CAM)**: 모델이 주목하는 이미지 영역을 시각화하는 기법
+
+**피처 맵(Feature Map)**: 합성곱 레이어에서 학습된 필터의 출력
+
+**어텐션 맵(Attention Map)**: 어텐션 메커니즘이 집중하는 영역을 표시하는 시각화
+
 **어텐션(Attention 어텐션)**: 중요한 부분에 집중하는 메커니즘
 
 **배치 정규화(Batch Normalization 배치 노멀라이제이션)**: 미니배치 단위로 정규화하는 기법
 
 **드롭아웃(Dropout 드롭아웃)**: 뉴런을 무작위로 제거하여 정규화하는 기법
 
+**가중치 감쇠(Weight Decay)**: L2 정규화로 모델 복잡도를 제어하는 기법
+
 **하이퍼파라미터(Hyperparameter 하이퍼파라미터)**: 학습 과정을 제어하는 설정값
 
 **옵티마이저(Optimizer 옵티마이저)**: 가중치 업데이트 알고리즘
 
 **학습률(Learning Rate 러닝 레이트)**: 가중치 업데이트의 크기를 결정하는 값
+
+**수용 영역(Receptive Field)**: 필터가 입력에서 보는 영역의 크기
