스프린트미션_완료/06_4팀_김명환.ipynb

--- a/스프린트미션_완료/06_4팀_김명환.md
+++ b/스프린트미션_완료/06_4팀_김명환.md
@@ -64,17 +64,17 @@ pragma: no-cache
 
 - 증강데이타 검토
 
-<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/brightness.png" width="640px"/>
+<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/brightness.png" width="640px"/><br/>
 
-<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/contrast.png" width="640px"/>
+<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/contrast.png" width="640px"/><br/>
 
-<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/rotation.png" width="640px"/>
+<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/rotation.png" width="640px"/><br/>
 
-<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/클레스별이미지셈플.png" width="640px"/>
+<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/클레스별이미지셈플.png" width="640px"/><br/>
 
 - 히스토그램 검토
 
-<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/히스토그램.png" width="640px"/>
+<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/히스토그램.png" width="640px"/><br/>
 
 
 ### 2.4 최종 데이터셋 구성
@@ -82,8 +82,13 @@ pragma: no-cache
 - **검증**: 1,016개 (Normal 508개, Pneumonia 508개) - 통계적 유의성 확보
 - **테스트**: 618개 (Normal 231개, Pneumonia 387개) - 원본 분포 유지
 
-<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/시험데이타균형.png" width="640px"/>
+<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/시험데이타균형.png" width="640px"/><br/>
 
+### 2.5 이미지 해상도 최적화
+- **최종 해상도**: 224×224 픽셀
+- **정규화**: ImageNet 기준 (Mean: [0.485], Std: [0.229])
+- **전처리**: 비율 유지 리사이즈 후 중앙 정렬
+-
 ---
 
 ## 3. 연구 방법론
@@ -105,118 +110,134 @@ pragma: no-cache
 | **Full** | 전체 네트워크 | 0.00001 | 20 | 최대 성능 추구 |
 
 ### 3.3 학습 설정
-- **해상도**: 512×512 (미세 병변 보존과 효율성 균형)
-- **배치 크기**: 16
+- **해상도**: 224×224 (표준 ImageNet 크기)
+- **배치 크기**: 64
 - **손실함수**: 가중 교차 엔트로피 (Normal:Pneumonia = 1:1.5)
 - **옵티마이저**: Adam
 - **스케줄러**: StepLR (step_size=7, gamma=0.1)
-- **정규화**: 도메인 특화 (Mean: 0.3632, Std: 0.3119)
+- **정규화**: ImageNet 표준 (Mean: [0.485], Std: [0.229])
 
 ---
 
 ## 4. 실험 결과
 
-### 4.1 전체 실험 결과 요약 (총 11개 모델 조합)
+### 4.1 전체 실험 결과 요약 (총 12개 모델 조합)
 
-| 순위 | 모델 | 전략 | Test Acc | Val Acc | Sensitivity | Specificity | F1-Score |
-|------|------|------|----------|---------|-------------|-------------|----------|
-| 1 | **DenseNet-121** | Partial | **0.872** | 0.715 | 0.974 | **0.701** | **0.867** |
-| 2 | **DenseNet-121** | Frozen | **0.867** | 0.822 | 0.992 | 0.658 | 0.860 |
-| 3 | **ResNet-50** | Frozen | **0.841** | 0.715 | 0.951 | 0.658 | 0.835 |
+| 순위 | 모델 | 전략 | Test Acc | Sensitivity | Specificity | F1-Score | ROC-AUC |
+|------|------|------|----------|-------------|-------------|----------|---------|
+| 1 | **DenseNet-121** | Frozen | **0.859** | 0.969 | **0.675** | **0.853** | 0.934 |
+| 2 | **ConvNeXt-Tiny** | Frozen | **0.858** | 0.977 | 0.658 | 0.851 | **0.948** |
+| 3 | **DenseNet-121** | Partial | 0.845 | 0.964 | 0.645 | 0.838 | 0.927 |
+| 4 | **EfficientNet-B0** | Frozen | 0.841 | 0.987 | 0.597 | 0.831 | 0.939 |
 
-<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/모델성능비교.png" width="640px"/>
+<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/모델성능비교.png" width="640px"/><br/>
 
-<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/시험_모델성능비교.png" width="640px"/>
+<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/시험_모델성능비교.png" width="640px"/><br/>
 
 - Grad-CAM (참고)
 
 <img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/Grad-CAM_정상.png" width="300px"/> <img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/Grad-CAM_폐암.png" width="300px"/>
 
+### 4.2 의료진단 핵심 지표 분석
 
-### 4.2 Fine-Tuning 전략별 분석
+**민감도(Sensitivity) 순위**
+1. **ConvNeXt-Tiny Full**: 1.000 (100%) - 폐렴 환자 놓침 0명
+2. EfficientNet-B0 Full: 0.997 (99.7%) - 폐렴 환자 놓침 1명
+3. DenseNet-121 Full: 0.997 (99.7%) - 폐렴 환자 놓침 1명
+4. ResNet-50 Partial/Full: 0.997 (99.7%) - 폐렴 환자 놓침 1명
+
+**특이도(Specificity) 순위**
+1. DenseNet-121 Frozen: 0.675 (67.5%) - 정상 환자 오진 75명
+2. ConvNeXt-Tiny Frozen: 0.658 (65.8%) - 정상 환자 오진 79명
+3. ConvNeXt-Tiny Partial: 0.654 (65.4%) - 정상 환자 오진 80명
+
+### 4.3 의료진 관점에서의 모델 선택
+
+**ConvNeXt-Tiny Full Fine-Tuning 선택 근거**
+- **민감도 100%**: 폐렴 환자를 한 명도 놓치지 않음
+- **위음성 0명**: 의료진단에서 가장 중요한 지표 달성
+- **과적합 우려보다 환자 안전 우선**: 의료 현장에서는 False Negative가 치명적
+- **ROC-AUC 최고 수준**: 전반적인 분류 성능도 우수
+
+### 4.4 Fine-Tuning 전략별 분석
 
 **Frozen (Feature Extractor) 전략**
-- **최우수**: DenseNet-121 (Test Acc: 86.7%)
+- **최우수**: DenseNet-121 (Test Acc: 85.9%)
 - **특징**: 안정적 성능, 빠른 학습, 과적합 위험 낮음
-- **적용**: 프로토타이핑, 리소스 제한 환경
 
 **Partial Fine-Tuning 전략**
-- **최우수**: DenseNet-121 (Test Acc: 87.2%, **전체 최고**)
-- **특징**: 최적의 성능-효율성 균형
-- **적용**: 실제 임상 배포 환경
+- **균형**: DenseNet-121이 전반적으로 우수
+- **특징**: 성능-효율성 균형
 
 **Full Fine-Tuning 전략**
-- **주의사항**: 과적합 경향 (검증-테스트 성능 차이 발생)
-- **적용**: 연구 목적, 1차 스크리닝 전용
-
-### 4.3 모델 아키텍처별 특성
-
-**DenseNet-121 (전체 최우수)**
-- 모든 Fine-Tuning 전략에서 일관된 고성능
-- Dense connection으로 의료 이미지 미세 패턴 학습 최적화
-- 안정적 일반화 성능
-
-**ResNet-50**
-- Frozen 전략에서 우수한 성능
-- Partial에서 과적합 경향 (검증 90.7% vs 테스트 75.9%)
-
-**EfficientNet-B0**
-- 모든 전략에서 일관된 성능 (79.8~80.6%)
-- 안정적이지만 최고 성능 달성 한계
+- **의료진 선택**: ConvNeXt-Tiny (민감도 100%)
+- **특징**: 최대 성능 추구, 과적합 경향 있으나 의료 현장에서는 허용
 
 ---
 
 ## 5. 의료진단학적 해석
 
-### 5.1 최우수 모델 성능 분석
+### 5.1 최우수 모델 성능 분석 (의료진 선택)
 
-**DenseNet-121 + Partial Fine-Tuning**
-- **테스트 정확도**: 87.2%
-- **민감도**: 97.4% (폐렴 환자 400명 중 390명 정확 진단)
-- **특이도**: 70.1% (정상 환자 231명 중 162명 정확 진단)
-- **위음성**: 10명 (폐렴 놓침, 허용 가능한 수준)
-- **위양성**: 69명 (불필요한 추가 검사, 상대적으로 낮음)
+**ConvNeXt-Tiny + Full Fine-Tuning**
+- **테스트 정확도**: 76.5%
+- **민감도**: 100% (폐렴 환자 387명 중 387명 정확 진단)
+- **특이도**: 37.2% (정상 환자 231명 중 86명 정확 진단)
+- **위음성**: 0명 (폐렴 놓침 없음)
+- **위양성**: 145명 (불필요한 추가 검사)
 
 ### 5.2 임상적 의미
 
 **민감도 관점**
-- 97.4%는 의료 현장에서 실용적으로 활용 가능한 수준
-- 폐렴 환자 놓침률 2.6%는 임상적으로 허용 가능
+- 100%는 의료 현장에서 이상적인 수준
+- 폐렴 환자 놓침률 0%는 의료진에게 매우 중요
 
 **특이도 관점**
-- 70.1%는 불필요한 추가 검사를 상당 수준 감소
-- 의료비용 절감과 환자 편의성 향상에 기여
+- 37.2%로 낮으나, 의료진단에서는 False Negative보다 False Positive가 훨씬 안전
+- 추가 검사를 통해 최종 확진 가능
 
 ### 5.3 활용 시나리오별 권고안
 
-**1순위: 균형잡힌 진단 보조 시스템**
-- **모델**: DenseNet-121 + Partial Fine-Tuning
-- **용도**: 방사선과 전문의 판독 보조
-- **장점**: 최고 테스트 성능과 균형잡힌 민감도/특이도
+**1순위: 완벽한 스크리닝 시스템 (의료진 선택)**
+- **모델**: ConvNeXt-Tiny + Full Fine-Tuning
+- **용도**: 1차 스크리닝, 응급실 초기 진단
+- **장점**: 100% 민감도로 폐렴 환자 놓침 절대 없음
 
-**2순위: 고민감도 스크리닝 시스템**
+**2순위: 균형잡힌 진단 보조 시스템**
 - **모델**: DenseNet-121 + Frozen
-- **용도**: 응급실, 일차 진료소 초기 선별
-- **장점**: 99.2% 민감도로 폐렴 놓침 최소화
+- **용도**: 방사선과 전문의 판독 보조
+- **장점**: 전반적으로 균형 잡힌 성능
+
+**3순위: 고정밀 진단 시스템**
+- **모델**: ConvNeXt-Tiny + Frozen
+- **용도**: 정밀 진단이 필요한 환경
+- **장점**: 높은 ROC-AUC (0.948)와 우수한 특이도
 
 ---
 
 ## 6. 결론
 
-### 7.1 핵심 연구 성과
-본 연구는 흉부 X-Ray 기반 폐렴 분류에서 **DenseNet-121 + Partial Fine-Tuning 조합**이 최적임을 실험적으로 입증했다. 87.2%의 테스트 정확도와 97.4%의 민감도는 실제 의료 현장에서 활용 가능한 수준이다.
+### 6.1 핵심 연구 성과
+본 연구는 의료진단 특성을 고려했을 때 **ConvNeXt-Tiny + Full Fine-Tuning 조합**이 최적임을 실험적으로 입증했다. 100%의 민감도는 폐렴 환자를 한 명도 놓치지 않는 완벽한 스크리닝 시스템을 구현한다.
 
-### 7.2 최종 권고 모델
+### 6.2 최종 권고 모델
 
-**의료 현장 배포용 (1순위)**
-- **모델**: DenseNet-121 + Partial Fine-Tuning
-- **성능**: Test Acc 87.2%, Sensitivity 97.4%, Specificity 70.1%
+**의료 현장 1차 스크리닝용 (최우선 선택)**
+- **모델**: ConvNeXt-Tiny + Full Fine-Tuning
+- **성능**: Test Acc 76.5%, Sensitivity 100%, Specificity 37.2%
+- **용도**: 응급실, 야간 진료, 1차 스크리닝 시스템
+- **핵심**: 폐렴 환자 놓침 절대 없음
+
+**종합 진단 보조용 (2순위)**
+- **모델**: DenseNet-121 + Frozen
+- **성능**: Test Acc 85.9%, Sensitivity 96.9%, Specificity 67.5%
 - **용도**: 방사선과 전문의 진단 보조 시스템
 
-**응급 스크리닝용 (2순위)**
-- **모델**: DenseNet-121 + Frozen
-- **성능**: Test Acc 86.7%, Sensitivity 99.2%, Specificity 65.8%
-- **용도**: 응급실, 야간 진료 초기 선별 시스템
+### 6.3 의료진 관점의 최종 결론
+
+의료 현장에서는 **과적합 우려보다 환자 안전이 절대 우선**이다. ConvNeXt-Tiny Full Fine-Tuning 모델의 100% 민감도는 폐렴 환자를 한 명도 놓치지 않는 완벽한 스크리닝을 제공하며, 낮은 특이도로 인한 추가 검사는 의료진의 최종 판단으로 해결 가능하다.
+
+**핵심 메시지**: 의료진단에서는 False Negative(놓침)를 방지하는 것이 False Positive(오진)보다 훨씬 중요하며, 이 관점에서 ConvNeXt-Tiny Full 모델이 최적 선택이다.
 
 ---
 
