실습 문서 업데이트

--- a/실습/FNC_실습_250828.md
+++ b/실습/FNC_실습_250828.md
@@ -11,6 +11,14 @@ author: "김명환"
 
 # FCN8s 기반 VOC2012 시맨틱 세그멘테이션
 
+## 실습 개요
+
+**작성자**: 코드잇 AI엔지니어 4기 김명환  
+**작성일**: 2025년 8월 28일  
+**목적**: FCN8s 기반 VOC2012 시맨틱 세그멘테이션
+
+---
+
 ## 목차
 1. [서론](#1-서론)<br/>
 2. [FCN8s 핵심 개념](#2-fcn8s-핵심-개념)<br/>
