데이타 -> 데이터

--- a/Learning/learning_LSTM.ipynb
+++ b/Learning/learning_LSTM.ipynb
@@ -9,8 +9,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "학습데이타셋 크기  40000\n",
-      "검증데이타셋 크기  5000\n",
+      "학습데이터셋 크기  40000\n",
+      "검증데이터셋 크기  5000\n",
       "Training start!\n"
      ]
     },
@@ -242,8 +242,8 @@
     "    train_size = int(num_data * 0.8)\n",
     "    val_size = int(num_data * 0.1)\n",
     "\n",
-    "    print('학습데이타셋 크기 ', train_size)\n",
-    "    print('검증데이타셋 크기 ', val_size)\n",
+    "    print('학습데이터셋 크기 ', train_size)\n",
+    "    print('검증데이터셋 크기 ', val_size)\n",
     "\n",
     "    train_data = temperatures[:train_size]\n",
     "    val_data = temperatures[train_size:train_size + val_size]\n",
@@ -266,7 +266,7 @@
     "    val_dataloader = DataLoader(val_dataset, batch_size=128)\n",
     "    test_dataloader = DataLoader(test_dataset, batch_size=128)\n",
     "\n",
-    "    # 테스트 데이타 10개\n",
+    "    # 테스트 데이터 10개\n",
     "    train_dataset = JenaTemperatureDataset(train_data_scaled[:10 + sequence_length], sequence_length)\n",
     "    val_dataset = JenaTemperatureDataset(val_data_scaled[:10 + sequence_length], sequence_length)\n",
     "    test_dataset = JenaTemperatureDataset(test_data_scaled[:10 + sequence_length], sequence_length)\n",
