--- a/Learning/learning_이미지분류.ipynb
+++ b/Learning/learning_이미지분류.ipynb
@@ -9,11 +9,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "학습데이타셋 크기  100\n",
-      "테스트데이타셋 크기  10000\n",
+      "학습데이터셋 크기  100\n",
+      "테스트데이터셋 크기  10000\n",
       "torch.Size([1, 28, 28])\n",
-      "학습데이타셋 크기  1\n",
-      "테스트데이타셋 크기  311\n",
+      "학습데이터셋 크기  1\n",
+      "테스트데이터셋 크기  311\n",
       "Training start!\n"
      ]
     },
@@ -316,8 +316,8 @@
     "    test_data = datasets.FashionMNIST(root='./fashion_mnist', train=False, download=True, transform=transform_test)\n",
     "    train_data = torch.utils.data.Subset(train_data, range(100)) # 테스트 100개\n",
     "\n",
-    "    print('학습데이타셋 크기 ', len(train_data))\n",
-    "    print('테스트데이타셋 크기 ', len(test_data))\n",
+    "    print('학습데이터셋 크기 ', len(train_data))\n",
+    "    print('테스트데이터셋 크기 ', len(test_data))\n",
     "\n",
     "    img, label = train_data[0]\n",
     "    print(img.shape)  # (채널, 높이, 너비)\n",
@@ -333,8 +333,8 @@
     "    return train_dataloader, val_dataloader, test_dataloader\n",
     "\n",
     "train_dataloader, val_dataloader, test_dataloader = data_load()\n",
-    "print('학습데이타셋 크기 ', len(train_dataloader))\n",
-    "print('테스트데이타셋 크기 ', len(test_dataloader))\n",
+    "print('학습데이터셋 크기 ', len(train_dataloader))\n",
+    "print('테스트데이터셋 크기 ', len(test_dataloader))\n",
     "\n",
     "model = CNNModel()\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
