--- a/스터디/의료데이타_표준편차1_1증가.md
+++ b/스터디/의료데이타_표준편차1_1증가.md
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "의료데이타 표준편차 10%"
-description: "의료데이타 - 표준편차를 10% 증가"
+title: "의료데이터 표준편차 10%"
+description: "의료데이터 - 표준편차를 10% 증가"
 date: 2025-08-20
 cache-control: no-cache
 expires: 0
@@ -9,7 +9,7 @@ pragma: no-cache
 author: "김명환"
 ---
 
-# 의료데이타 - 표준편차를 10% 증가
+# 의료데이터 - 표준편차를 10% 증가
 
 표준편차를 10% 증가시키는 근거에 대해, **직접적으로 "표준편차에 1.1을 곱해 정규화한다"**는 공식 가이드라인이나 논문은 현재까지 의료 영상 분야에서 널리 인용되는 명확한 규정은 없습니다.
 
