--- a/스프린트미션_완료/06_4팀_김명환.md
+++ b/스프린트미션_완료/06_4팀_김명환.md
@@ -37,7 +37,7 @@ pragma: no-cache
 - **검증**: 8개 Normal, 8개 Pneumonia (통계적으로 부족)
 - **테스트**: 234개 Normal, 390개 Pneumonia
 
-<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/데이타불균형.png" width="640px"/>
+<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/데이터불균형.png" width="640px"/>
 
 ### 2.2 데이터 품질 개선
 **중복 데이터 제거**
@@ -62,7 +62,7 @@ pragma: no-cache
 - CLAHE, 가우시안 블러, 대비 조정, 회전 변환 등 체계적 비교
 - **핵심 발견**: 클래스별 차등 밝기 조정이 가장 효과적
 
-- 증강데이타 검토
+- 증강데이터 검토
 
 <img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/brightness.png" width="640px"/><br/>
 
@@ -82,7 +82,7 @@ pragma: no-cache
 - **검증**: 1,016개 (Normal 508개, Pneumonia 508개) - 통계적 유의성 확보
 - **테스트**: 618개 (Normal 231개, Pneumonia 387개) - 원본 분포 유지
 
-<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/시험데이타균형.png" width="640px"/><br/>
+<img src="https://c0z0c.github.io/sprint_mission/스프린트미션_완료/image/06_4팀_김명환/시험데이터균형.png" width="640px"/><br/>
 
 ### 2.5 이미지 해상도 최적화
 - **최종 해상도**: 224×224 픽셀
