--- a/위클리페이퍼/위클리_페이퍼_8_AI4기_김명환.md
+++ b/위클리페이퍼/위클리_페이퍼_8_AI4기_김명환.md
@@ -306,18 +306,13 @@ mAP를 활용한 모델 최적화:
 
 #### 3.2.2. Speed-Accuracy Trade-off
 
-```mermaid
-scatter-chart
-    title "객체 검출 모델 성능 비교"
-    x-axis "속도 (FPS)" 0 --> 150
-    y-axis "mAP@0.5 (%)" 50 --> 65
-    
-    "Faster R-CNN" : [7, 59.9]
-    "SSD300" : [46, 54.1]
-    "YOLOv3" : [35, 55.3]
-    "YOLOv5s" : [140, 56.8]
-    "EfficientDet" : [27, 55.1]
-```
+| 모델            | 속도 (FPS) | mAP＠0.5 (％) |
+|-----------------|------------|--------------|
+| Faster R-CNN    | 7          | 59.9         |
+| SSD300          | 46         | 54.1         |
+| YOLOv3          | 35         | 55.3         |
+| YOLOv5s         | 140        | 56.8         |
+| EfficientDet    | 27         | 55.1         |
 
 ### 3.3. COCO 데이터셋과의 비교
 
